--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -491,10 +491,73 @@ arithmeticMean(3, 8.25, 18.75)
 
 ### In-Out 파라미터 (In-Out Parameters)
 
+함수 파라미터는 기본적으로 상수입니다.
 
+해당 함수의 본문 내에서 함수 파라미터 값을 변경하려고 하면 컴파일 에러가 발생합니다.
 
+이것은 실수로 파라미터 값을 변경할 수 없음을 의미합니다.
 
+함수의 파라미터 값을 변경하고 함수 호출이 종료된 후에도 이러한 변경된 값을 유지하고 싶다면 in-out 파라미터 (in-out parameter) 로 정의하세요.
 
+#
+
+in-out 파라미터는 파라미터의 타입 바로 앞에 `inout` 키워드를 추가하여 작성합니다.
+
+in-out 파라미터는 함수로 전달하는 값을 가지고 있고 함수로 부터 이 값을 수정하고 원래 값을 대체하기 위해 함수 밖으로 다시 되돌려 줍니다.
+
+in-out 파라미터의 동작 및 컴파일 최적화에 대한 자세한 설명은 [In-Out 파라미터 (In-Out Parameters)]() 를 참조하세요.
+
+#
+
+in-out 파라미터의 인수로 변수만 전달할 수 있습니다.
+
+상수와 리터럴은 수정할 수 없기 때문에 상수 또는 리터럴 값을 인수로 전달할 수 없습니다.
+
+변수를 in-out 파라미터에 인수로 전달할 때 변수 이름 바로 앞에 엠퍼샌드 (`&`) 를 배치하여 함수에 의해 변수가 수정될 수 있음을 나타냅니다.
+
+> Note    
+> in-out 파라미터는 기본값을 가질 수 없으며 가변 파라미터는 `inout` 으로 표시될 수 없습니다.
+
+#
+
+다음 예제의 함수는 `a` 와 `b` 라는 2개의 in-out 정수 파라미터가 있는 `swapTwoInts(_:_:)` 입니다.
+
+~~~ swift
+func swapTwoInts(_ a: inout Int, _ b: inout Int) {
+    let temporaryA = a
+    a = b
+    b = temporaryA
+}
+~~~
+
+`swapTwoInts(_:_:)` 함수는 간단하게 `b` 의 값을 `a` 로 `a` 의 값을 `b` 로 바꿉니다.
+
+이 함수는 `a` 의 값을 `temporaryA` 라 하는 임시 상수에 저장하고 `b` 의 값을 `a` 에 할당하고 `temporaryA` 의 값을 `b` 에 할당합니다.
+
+#
+
+2가지 `Int` 타입의 변수를 이용해서 `swapTwoInts(_:_:)` 함수를 호출하여 해당 값을 바꿀 수 있습니다.
+
+`swapTwoInts(_:_:)` 함수에 전달할 때 `someInt` 와 `anotherInt` 의 이름 앞에 앰퍼샌드를 붙여야 합니다.
+
+~~~ swift
+var someInt = 3
+var anotherInt = 107
+swapTwoInts(&someInt, &anotherInt)
+print("someInt is now \(someInt), and anotherInt is now \(anotherInt)")
+// Prints "someInt is now 107, and anotherInt is now 3"
+~~~
+
+위의 예제는 `someInt` 와 `anotherInt` 의 기본값이 함수의 외부에 정의되었지만 `swapTwoInts(_:_:)` 함수에 의해 원래 값이 수정되는 것을 보여줍니다.
+
+> Note    
+> in-out 파라미터는 함수에서 값을 반환하는 것과 다릅니다.
+> 위의 `swapTwoInts` 예제는 반환 타입을 정의하거나 값을 반환하지 않지만 `someInt` 와 `anotherInt` 의 값은 여전히 수정합니다.
+> in-out 파라미터는 함수가 함수 본문 범위 외부에 영향을 미치는 대체 방법입니다.
+
+<br>
+
+## 함수 타입 (Function Types)
 
 
 
