--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -559,9 +559,42 @@ print("someInt is now \(someInt), and anotherInt is now \(anotherInt)")
 
 ## 함수 타입 (Function Types)
 
+모든 함수에는 파라미터 타입과 함수의 반환 타입으로 구성된 특정 함수 타입 (function type) 이 있습니다.
 
+~~~ swift
+func addTwoInts(_ a: Int, _ b: Int) -> Int {
+    return a + b
+}
+func multiplyTwoInts(_ a: Int, _ b: Int) -> Int {
+    return a * b
+}
+~~~
 
+이 예제는 `addTwoInts` 와 `multiplyTwoInts` 라 불리는 2개의 간단한 수학 함수를 정의합니다.
 
+이러한 함수는 각각 2개의 `Int` 값을 가지며 적절한 수학 연산을 수행하여 `Int` 값을 반환합니다.
+
+이 두 함수의 타입은 `(Int, Int) -> Int` 입니다.
+
+이것은 아래와 같이 읽을 수 있습니다.
+
+"함수는 모두 `Int` 타입인 2개의 파라미터를 가지며 `Int` 타입을 반환합니다."
+
+#
+
+다음의 예제는 파라미터 또는 반환값이 없는 함수 입니다.
+
+~~~ swift
+func printHelloWorld() {
+    print("hello, world")
+}
+~~~
+
+이 함수의 타입은 `() -> Void` 또는 "파라미터가 없고 `Void` 를 반환하는 함수" 입니다.
+
+<br>
+
+### 함수 타입 사용 (Using Function Types)
 
 
 
