--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -596,7 +596,95 @@ func printHelloWorld() {
 
 ### 함수 타입 사용 (Using Function Types)
 
+Swift 의 다른 타입과 마찬가지로 함수 타입을 사용합니다.
 
+예를 들어 상수나 변수를 함수 타입으로 정의하고 해당 변수에 적절한 함수를 할당할 수 있습니다.
+
+~~~ swift
+var mathFunction: (Int, Int) -> Int = addTwoInts
+~~~
+
+위의 예제는 다음과 같이 읽을 수 있습니다.
+
+"'2개의 `Int` 값을 취해 하나의 `Int` 값을 반환하는 함수' 타입을 가지는 `mathFunction` 변수를 정의합니다. 해당 변수를 `addTwoInts` 라는 함수를 참조하도록 설정하세요."
+
+`addTwoInts(_:_:)` 함수는 `mathFunction` 변수와 동일한 타입을 가지므로 Swift 의 타입 검사기는 할당을 허락합니다.
+
+이제 `mathFunction` 이라는 이름으로 할당된 함수를 호출할 수 있습니다.
+
+~~~ swift
+print("Result: \(mathFunction(2, 3))")
+// Prints "Result: 5"
+~~~
+
+#
+
+비함수 타입과 동일한 방식으로 타입이 일치하는 다른 함수를 같은 변수에 할당할 수 있습니다.
+
+~~~ swift
+mathFunction = multiplyTwoInts
+print("Result: \(mathFunction(2, 3))")
+// Prints "Result: 6"
+~~~
+
+#
+
+다른 타입과 마찬가지로 상수 또는 변수에 함수를 할당할 때 함수 타입을 추론하도록 Swift 에 맡길 수 있습니다.
+
+~~~ swift
+let anotherMathFunction = addTwoInts
+// anotherMathFunction is inferred to be of type (Int, Int) -> Int
+~~~
+
+<br>
+
+### 파라미터 타입으로서의 함수 타입 (Function Types as Parameter Types)
+
+`(Int, Int) -> Int` 와 같은 함수 타입을 다른 함수의 파라미터로 사용할 수 있습니다.
+
+이렇게 하면 함수 호출 시 함수 호출자가 제공하도록 함수 구현의 일부 측면을 남겨둘 수 있습니다.
+
+#
+
+다음 예제는 위 수학 함수의 결과를 출력합니다.
+
+~~~ swift
+func printMathResult(_ mathFunction: (Int, Int) -> Int, _ a: Int, _ b: Int) {
+    print("Result: \(mathFunction(a, b))")
+}
+printMathResult(addTwoInts, 3, 5)
+// Prints "Result: 8"
+~~~
+
+이 예제에서는 3개의 파라미터가 있는 `printMathResult(_:_:_:)` 함수를 정의합니다.
+
+첫번째 파라미터는 `mathFunction` 이라 불리는 `(Int, Int) -> Int` 타입입니다.
+
+첫번째 파라미터의 인수로 해당 타입의 모든 함수를 전달할 수 있습니다.
+
+두번째와 세번째 파라미터는 `a` 와 `b` 라 불리고 둘다 `Int` 타입입니다.
+
+이는 제공된 수학 함수에 대한 2개의 입력값으로 사용됩니다.
+
+#
+
+`printMathResult(_:_:_:)` 함수가 호출될 때 `addTwoInts(_:_:)` 함수와 정수 `3` 과 `5` 가 전달됩니다.
+
+`3` 과 `5` 값을 사용하여 제공된 함수를 호출 하고 `8` 의 결과를 출력합니다.
+
+#
+
+`printMathResult(_:_:_:)` 의 역할은 적절한 타입의 수학 함수에 대한 호출 결과를 출력하는 것입니다.
+
+이것은 해당 함수의 구현이 실제로 무엇을 하는지는 중요하지 않습니다.
+
+단지 함수가 올바른 타입인지가 중요합니다.
+
+이를 통해 `printMathResult(_:_:_:)` 함수가 타입이 안전한 방식으로 함수 호출자에게 일부 기능을 전달할 수 있습니다.
+
+<br>
+
+### 반환 타입으로서의 함수 타입 (Function Types as Return Types)
 
 
 
