--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -686,33 +686,111 @@ printMathResult(addTwoInts, 3, 5)
 
 ### 반환 타입으로서의 함수 타입 (Function Types as Return Types)
 
+함수 타입을 다른 함수의 반환 타입으로 사용할 수 있습니다.
 
+반환하는 함수의 반환 화살표 (`->`) 바로 뒤에 완전한 함수 타입을 작성하면 됩니다.
 
+#
 
+다음 예제는 `stepForward(_:)` 와 `stepBackward(_:)` 라 불리는 2개의 간단한 함수를 정의합니다.
 
+`stepForward(_:)` 함수는 입력값에 1을 더해 반환하고 `stepBackward(_:)` 함수는 입력값에 1을 빼고 반환합니다.
 
+두 함수는 모두 `(Int) -> Int` 타입입니다.
 
+~~~ swift
+func stepForward(_ input: Int) -> Int {
+    return input + 1
+}
+func stepBackward(_ input: Int) -> Int {
+    return input - 1
+}
+~~~
 
+#
 
+다음의 함수는 반환 타입이 `(Int) -> Int` 인 `chooseStepFunction(backward:)` 함수 입니다.
 
+`chooseStepFunction(backward:)` 함수는 `backward` 라는 부울 파라미터를 기반으로 `stepForward(_:)` 함수 또는 `stepBackward(_:)` 함수를 반환합니다.
 
+~~~ swift
+func chooseStepFunction(backward: Bool) -> (Int) -> Int {
+    return backward ? stepBackward : stepForward
+}
+~~~
 
+#
 
+이제 `chooseStepFunction(backward:)` 를 사용하여 한 방향 또는 다른 방향으로 이동하는 함수를 얻을 수 있습니다.
 
+~~~ swift
+var currentValue = 3
+let moveNearerToZero = chooseStepFunction(backward: currentValue > 0)
+// moveNearerToZero now refers to the stepBackward() function
+~~~
 
+위의 예제는 `currentValue` 라는 변수를 점진적으로 0에 가깝게 이동하기 위해 양수 또는 음수 단계가 필요한지 여부를 결정합니다.
 
+`currentValue` 의 초기값은 `3` 을 가지고 이것은 `currentValue > 0` 이 `true` 를 반환한다는 의미이며 `chooseStepFunction(backward:)` 가 `stepBackward(_:)` 함수를 반환하도록 합니다.
 
+반환된 함수의 참조는 `moveNearerToZero` 라는 상수에 저장됩니다.
 
+#
 
+`moveNearerToZero` 가 올바른 함수를 참조하므로 0으로 계산하는데 사용할 수 있습니다.
 
+~~~ swift
+print("Counting to zero:")
+// Counting to zero:
+while currentValue != 0 {
+    print("\(currentValue)... ")
+    currentValue = moveNearerToZero(currentValue)
+}
+print("zero!")
+// 3...
+// 2...
+// 1...
+// zero!
+~~~
 
+<br>
 
+## 중첩 함수 (Nested Functions)
 
+이 챕터에서 접한 모든 함수는 전역 범위에서 정의된 전역 함수 (global functions) 의 예제였습니다.
 
+중첩 함수 (nested functions) 라고 하는 다른 함수의 본문 내부에 함수를 정의할 수도 있습니다.
 
+#
 
+중첩 함수는 기본적으로 외부에서 보이지 않지만 중첩 함수를 둘러싼 함수를 통해 호출될 수 있고 사용될 수 있습니다.
 
+중첩 함수를 둘러싼 함수는 중첩 함수 중 하나를 반환하여 중첩 함수를 다른 범위에서 사용할 수도 있습니다.
 
+#
+
+위의 예제 `chooseStepFunction(backward:)` 를 충접 함수를 사용하고 반환하도록 다시 작성할 수 있습니다.
+
+~~~ swift
+func chooseStepFunction(backward: Bool) -> (Int) -> Int {
+    func stepForward(input: Int) -> Int { return input + 1 }
+    func stepBackward(input: Int) -> Int { return input - 1 }
+    return backward ? stepBackward : stepForward
+}
+var currentValue = -4
+let moveNearerToZero = chooseStepFunction(backward: currentValue > 0)
+// moveNearerToZero now refers to the nested stepForward() function
+while currentValue != 0 {
+    print("\(currentValue)... ")
+    currentValue = moveNearerToZero(currentValue)
+}
+print("zero!")
+// -4...
+// -3...
+// -2...
+// -1...
+// zero!
+~~~
 
 ***
 
