--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -1,5 +1,88 @@
 # Closures (클로저)
 
+명명된 함수를 생성하지 않고 함께 실행되는 코드 그룹입니다.
+
+클로저 (Closures) 는 코드에서 전달하고 사용할 수 있는 자체 포함된 기능 블럭입니다.
+
+Swift 의 클로저는 다른 프로그래밍 언어의 클로저, 익명 함수, 람다 및 블럭과 유사합니다.
+
+#
+
+클로저는 정의된 컨텍스트에서 모든 상수 및 변수에 대한 참조를 캡처하고 저장할 수 있습니다.
+
+이는 해당 상수와 변수를 폐쇄 (closing over) 하는 것으로 알려져 있습니다.
+
+Swift 는 캡처에 대한 모든 메모리 관리를 처리합니다.
+
+> Note    
+> 캡처에 대한 개념이 익숙하지 않더라도 걱정하지 마세요.
+> 아래 [캡처값 (Capturing Values)]() 에 자세히 설명되어 있습니다.
+
+#
+
+[함수 (Functinos)]() 에서 소개한 전역 및 중첩 함수는 클로저의 특별한 케이스 입니다.
+
+클로저는 3가지 형태 중 하나를 취합니다.
+
+- 전역 함수는 이름을 가지고 어떠한 값도 캡처하지 않는 클로저입니다.
+
+- 중첩 함수는 이름을 가지고 둘러싼 함수에서 값을 캡처할 수 있는 클로저입니다.
+
+- 클로저 표현식은 주변 컨텍스트에서 값을 캡처할 수 있는 경량 구문으로 작성된 이름이 없는 클로저 입니다.
+
+#
+
+Swift 의 클로저 표현식은 일반 시나리오에서 간결하고 복잡하지 않은 구문을 장려하는 최적화를 통해 깔끔하고 명확한 스타일을 가지고 있습니다.
+
+이러한 최적화에는 다음이 포함됩니다.
+
+- 컨텍스트에서 파라미터와 반환값 타입 추론
+
+- 단일 표현식 클로저의 암시적 반환
+
+- 단축 인수 이름
+
+- 후행 클로저 구문
+
+<br>
+
+## 클로저 표현식 (Closure Expressions)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
