--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -128,7 +128,53 @@ var reversedNames = names.sorted(by: backward)
 }
 ~~~
 
+#
 
+클로저 표현식 구문의 파라미터는 in-out 파라미터 일 수 있지만 기본값을 가질 수 없습니다.
+
+가변 파라미터의 이름을 지정하면 가변 파라미터를 사용할 수 있습니다.
+
+튜플은 파라미터 타입 및 반환 타입으로도 사용될 수 있습니다.
+
+#
+
+아래 예제는 위의 `backward(_:_:)` 함수의 클로저 표현식 버전 입니다.
+
+~~~ swift
+reversedNames = names.sorted(by: { (s1: String, s2: String) -> Bool in
+    return s1 > s2
+})
+~~~
+
+이 인라인 클로저에 대한 파라미터와 반환 타입의 선언은 `backward(_:_:)` 함수에서 선언한 것과 동일합니다.
+
+두 경우 모두 `(s1: String, s2: String) -> Bool` 로 작성합니다.
+
+그러나 인라인 클로저 표현식의 경우 파라미터와 반환 타입은 중괄호 외부가 아닌 내부에 작성됩니다.
+
+#
+
+클로저 본문의 시작은 `in` 키워드로 시작합니다.
+
+이 키워드는 클로저의 파라미터 및 반환 타입 정의가 끝남을 나타내며 클로저의 본문이 시작함을 나타냅니다.
+
+#
+
+클로저의 본문이 너무 짧기 때문에 한줄로 작성할 수 있습니다.
+
+~~~ swift
+reversedNames = names.sorted(by: { (s1: String, s2: String) -> Bool in return s1 > s2 } )
+~~~
+
+이것은 `sorted(by:)` 메서드에 대한 전체 호출이 동일하게 유지되었음을 보여줍니다.
+
+소괄호는 여전히 메서드의 전체 인수를 둘러싸고 있습니다.
+
+그러나 해당 인수는 이제 인라인 클로저입니다.
+
+<br>
+
+### 컨텍스트에서 타입 추론 (Inferring Type From Context)
 
 
 
