--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -176,6 +176,33 @@ reversedNames = names.sorted(by: { (s1: String, s2: String) -> Bool in return s1
 
 ### 컨텍스트에서 타입 추론 (Inferring Type From Context)
 
+정렬 클로저는 메서드에 인수로 전달되기 때문에 Swift 는 파라미터 타입과 반환되는 값의 타입을 추론할 수 있습니다.
+
+`sorted(by:)` 메서드는 문자열 배열에서 호출되므로 해당 인수는 `(String, String) -> Bool` 타입의 함수여야 합니다.
+
+이는 클로저 표현식 정의의 일부로 `(String, String)` 과 `Bool` 타입을 작성할 필요가 없음을 의미합니다.
+
+모든 타입을 유추할 수 있으므로 반환 화살표 (`->`) 와 파라미터의 이름을 둘러싼 소괄호를 생략할 수 있습니다.
+
+~~~ swift
+reversedNames = names.sorted(by: { s1, s2 in return s1 > s2 } )
+~~~
+
+#
+
+인라인 클로저 표현식으로 함수나 메서드에 클로저를 전달할 때 파라미터 타입과 반환타입을 항상 추론할 수 있습니다.
+
+결과적으로 클로저가 함수 또는 메서드 인수로 사용될 때 인라인 클로저를 완전한 형태로 작성할 필요가 없습니다.
+
+#
+
+그럼에도 불구하고 원하는 경우 타입을 명시적으로 만들 수 있으며 코드를 읽는 자의 모호성을 방지하려면 그렇게 하는 것이 좋습니다.
+
+`sorted(by:)` 메서드의 경우 정렬이 수행된다는 사실에서 클로저의 목적이 분명하며 문자열 배열의 정렬을 지원하기 때문에 코드를 읽는 사람이 클로저가 `String` 값으로 작동할 가능성이 있다고 가정하는 것이 안전합니다.
+
+<br>
+
+### 단일 표현식 클로저의 암시적 반환 (Implicit Returns from Single-Expression Closures)
 
 
 
