--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -204,6 +204,19 @@ reversedNames = names.sorted(by: { s1, s2 in return s1 > s2 } )
 
 ### 단일 표현식 클로저의 암시적 반환 (Implicit Returns from Single-Expression Closures)
 
+단일 표현식 클로저 (Single-expression closures) 는 이전 예제의 버전에서와 같은 선언에서 `return` 키워드를 생략하여 단일 표현식의 결과를 암시적으로 반환할 수 있습니다.
+
+~~~ swift
+reversedNames = names.sorted(by: { s1, s2 in s1 > s2 } )
+~~~
+
+여기서 `sorted(by:)` 메서드 인수의 함수 타입은 클로저에서 `Bool` 값이 반환되어야함을 분명히 합니다.
+
+클로저의 본문에는 `Bool` 값을 반환하는 단일 표현식 (`s1 > s2`) 이 포함되어 있으므로 모호하지 않고 `return` 키워드를 생략할 수 있습니다.
+
+<br>
+
+### 단축 인수 이름 (Shorthand Argument Names)
 
 
 
