--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -218,6 +218,31 @@ reversedNames = names.sorted(by: { s1, s2 in s1 > s2 } )
 
 ### 단축 인수 이름 (Shorthand Argument Names)
 
+Swift 는 자동으로 인라인 클로저에 약칭 인수 이름을 제공합니다.
+
+`$0`, `$1`, `$2` 등의 이름으로 클로저의 인수값을 참조하는데 사용할 수 있습니다.
+
+#
+
+클로저 표현식 내에서 이러한 단축 인수 이름을 사용하는 경우 클로저 정의에서 클로저 인수 목록을 생략할 수 있습니다.
+
+단축 인수 이름의 타입은 예상되는 함수 타입에서 추론되며, 사용하는 가장 높은 숫자의 단축 인수에 따라 클로저가 사용하는 인수의 갯수가 결정됩니다.
+
+클로저 표현식이 전체 본문으로 구성되기 때문에 `in` 키워드를 생략할 수도 있습니다.
+
+~~~ swift
+reversedNames = names.sorted(by: { $0 > $1 } )
+~~~
+
+여기서 `$0` 과 `$1` 은 클로저의 첫번째와 두번째 `String` 인수를 참조합니다.
+
+`$1` 은 숫자가 가장 높은 단축 인수이기 때문에 클로저는 2개의 인수가 있다고 이해합니다.
+
+여기서 `sorted(by:)` 함수는 인수가 모두 문자열인 클로저를 기대하기 때문에 단축 인수 `$0` 과 `$1` 모두 `String` 타입입니다.
+
+<br>
+
+### 연산자 메서드 (Operator Methods)
 
 
 
