--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -244,7 +244,23 @@ reversedNames = names.sorted(by: { $0 > $1 } )
 
 ### 연산자 메서드 (Operator Methods)
 
+실제로 위의 클로저 표현식을 작성하는 더 짧은 방법이 있습니다.
 
+Swift 의 `String` 타입은 보다 큰 연산자 (`>`) 의 문자열별 구현을 `String` 타입의 파라미터 2개가 있는 메서드로 정의하고 `Bool` 타입의 값을 반환합니다.
+
+이것은 `sorted(by:)` 메서드에 필요한 메서드 타입과 정확히 일치합니다.
+
+따라서 단순히 보다 큰 연산자를 전달하면 Swift 는 문자열 특정 구현을 사용하기 원한다고 추론합니다.
+
+~~~ swift
+reversedNames = names.sorted(by: >)
+~~~
+
+연산자 메서드에 대한 자세한 내용은 [연산자 메서드 (Operator Methods)]() 를 참조하세요.
+
+<br>
+
+## 후행 클로저 (Trailing Closures)
 
 
 
