--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -262,6 +262,109 @@ reversedNames = names.sorted(by: >)
 
 ## 후행 클로저 (Trailing Closures)
 
+클로저 표현식을 함수의 마지막 인수로 함수에 전달해야하고 클로저 표현식이 긴 경우 후행 클로저 (trailing closure) 로 작성하는 것이 유용할 수 있습니다.
+
+후행 클로저는 함수의 인수이지만 함수 호출의 소괄호 뒤에 후행 클로저를 작성합니다.
+
+후행 클로저 구문을 사용할 때 함수 호출의 일부로 첫번째 클로저 인수 레이블을 작성하지 않아도 됩니다.
+
+함수 호출에는 여러개의 후행 클로저가 포함될 수 있습니다.
+
+그러나 아래 처음 몇가지 예제에서는 단일 후행 클로저를 사용합니다.
+
+~~~ swift
+func someFunctionThatTakesAClosure(closure: () -> Void) {
+    // function body goes here
+}
+
+
+// Here's how you call this function without using a trailing closure:
+
+
+someFunctionThatTakesAClosure(closure: {
+    // closure's body goes here
+})
+
+
+// Here's how you call this function with a trailing closure instead:
+
+
+someFunctionThatTakesAClosure() {
+    // trailing closure's body goes here
+}
+~~~
+
+#
+
+위의 [클로저 표현식 구문]() 섹션에 문자열 정렬 클로저는 `sorted(by:)` 메서드의 소괄호 외부에 후행 클로저로 작성할 수 있습니다.
+
+~~~ swift
+reversedNames = names.sorted() { $0 > $1 }
+~~~
+
+#
+
+클로저 표현식이 함수 또는 메서드의 유일한 인수로 제공되고 해당 표현식을 후행 클로저로 제공하는 경우 함수를 호출할 때 함수 또는 메서드 이름뒤에 소괄호 `()` 를 작성하지 않아도 됩니다.
+
+~~~ swift
+reversedNames = names.sorted { $0 > $1 }
+~~~
+
+#
+
+후행 클로저는 클로저가 길어서 한줄에 인라인으로 작성이 불가능할 때 유용합니다.
+
+예를 들어 Swift 의 `Array` 타입에는 클로저 표현식을 단일 인수로 사용하는 `map(_:)` 메서드가 있습니다.
+
+이 클로저는 배열의 각 항목에 대해 한번씩 호출되며 해당 항목에 대해 매핑된 대체값 (다른 타입일 수 있음) 을 반환합니다.
+
+`map(_:)` 에 전달하는 클로저에 작성된 코드에 따라 매핑 특성과 반환된 값의 타입을 지정합니다.
+
+#
+
+제공된 클로저에 각 배열의 요소를 적용한 후에 `map(_:)` 메서드는 기존 배열의 해당값과 동일한 순서로 새로 매핑된 값의 새로운 배열을 반환합니다.
+
+#
+
+다음은 `Int` 값 배열을 `String` 값 배열로 변환하기 위해 후행 클로저가 있는 `map(_:)` 메서드를 어떻게 사용하는지 나타냅니다.
+
+배열 `[16, 58, 510]` 은 새로운 배열 `["OneSix", "FiveEight", "FiveOneZero"]` 를 생성하는데 사용됩니다.
+
+~~~ swift
+let digitNames = [
+    0: "Zero", 1: "One", 2: "Two",   3: "Three", 4: "Four",
+    5: "Five", 6: "Six", 7: "Seven", 8: "Eight", 9: "Nine"
+]
+let numbers = [16, 58, 510]
+~~~
+
+위의 코드는 정수와 해당 정수에 맞는 영어 표기를 매핑하는 딕셔너리를 생성합니다.
+
+또한 문자열로 변환하기 위한 정수의 배열도 정의합니다.
+
+#
+
+`numbers` 배열의 `map(_:)` 메서드의 후행 클로저로 클로저 표현식을 전달하여 `String` 값의 배열을 생성할 수 있습니다.
+
+~~~ swift
+let strings = numbers.map { (number) -> String in
+    var number = number
+    var output = ""
+    repeat {
+        output = digitNames[number % 10]! + output
+        number /= 10
+    } while number > 0
+    return output
+}
+// strings is inferred to be of type [String]
+// its value is ["OneSix", "FiveEight", "FiveOneZero"]
+~~~
+
+
+
+
+
+
 
 
 
