--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -360,6 +360,31 @@ let strings = numbers.map { (number) -> String in
 // its value is ["OneSix", "FiveEight", "FiveOneZero"]
 ~~~
 
+`map(_:)` 메서드는 배열의 각 항목에 대해 클로저 표현식을 한번씩 호출합니다.
+
+매핑할 배열의 값에서 타입을 추론할 수 있으므로 클로저의 입력 파라미터인 `number` 타입을 지정할 필요가 없습니다.
+
+#
+
+이 예제에서 변수 `number` 는 클로저의 `number` 파라미터 값으로 초기화되기 때문에 클로저 본문 내에서 값을 수정할 수 있습니다. (함수와 클로저의 파라미터는 항상 상수입니다.)
+
+클로저 표현식은 매핑된 출력 배열에 저장될 타입을 나타내기 위해 `String` 반환 타입도 지정합니다.
+
+#
+
+클로저 표현식은 호출될 때마다 `output` 이라는 문자열을 만듭니다.
+
+나머지 연산자 (`number % 10`) 를 사용하여 `number` 의 마지막 숫자를 계산하고 `digitNames` 딕셔너리에서 적절한 숫자 문자열을 찾습니다.
+
+클로저는 0보다 큰 정수에 대한 문자열 표현을 생성하는데 사용할 수 있습니다.
+
+> Note    
+> 딕셔너리 서브 스크립트는 키가 존재하지 않는 경우에 값을 찾는 것을 실패하기 위해 옵셔널 값을 반환합니다.
+> 그래서 `digitNames` 딕셔너리의 서브 스크립트를 호출할 때는 느낌표 (`!`) 를 붙여 줍니다.
+> 위의 예제에서 `digitNames` 딕셔너리에 대해 `number % 10` 은 항상 유요한 서브 스크립트 키를 보장하므로 느낌표를 사용하여 서브 스크립트의 옵셔널 반환값에 저장된 `String` 값을 강제로 언래핑 합니다.
+
+#
+
 
 
 
