--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -385,8 +385,69 @@ let strings = numbers.map { (number) -> String in
 
 #
 
+`digitNames` 딕셔너리에서 반환된 문자열이 `output` 앞에 추가되어 효과적으로 숫자의 문자열 버전을 역순으로 구성합니다.
 
+(표현식 `number % 10` 은 `16` 의 경우 `6`, `58` 의 경우 `8`, `510` 의 경우 `0` 을 제공합니다.)
 
+그런 다음 `number` 변수는 `10` 으로 나눠어 집니다.
+
+이것은 정수이기 때문에 나누면 버림이 되고 `16` 은 `1`, `58` 은 `5`, `510` 은 `51` 이 됩니다.
+
+#
+
+이 프로세스는 `number` 가 `0` 이 될때까지 반복합니다.
+
+이 시점에서 `output` 문자열은 클로저로 부터 반환되고 `map(_:)` 메서드에 의해 출력 배열에 추가됩니다.
+
+#
+
+위의 예제에서 후행 클로저 구문을 사용하면 클로저가 지원하는 함수 바로 뒤에 클로저의 기능을 깔끔하게 캡슐화 합니다.
+
+전체 클로저를 `map(_:)` 메서드의 바깥 소괄호로 감쌀 필요가 없습니다.
+
+#
+
+함수가 여러 클로저를 사용하는 경우 첫번째 후행 클로저의 인수 레이블을 생략하고 나머지 후행 클로저에 레이블을 지정합니다.
+
+예를 들어 아래의 함수는 사진 갤러리의 사진을 불러옵니다.
+
+~~~ swift
+func loadPicture(from server: Server, completion: (Picture) -> Void, onFailure: () -> Void) {
+    if let picture = download("photo.jpg", from: server) {
+        completion(picture)
+    } else {
+        onFailure()
+    }
+}
+~~~
+
+#
+
+사진을 불로오기 위해 이 함수를 호출할 때 2개의 클로저를 제공합니다.
+
+첫번째 클로저는 성공적인 다운로드 후 사진을 표시하는 완료 핸들러 입니다.
+
+두번째 클로저는 사용자에게 오류를 표시하는 오류 처리기 입니다.
+
+~~~ swift
+loadPicture(from: someServer) { picture in
+    someView.currentPicture = picture
+} onFailure: {
+    print("Couldn't download the next picture.")
+}
+~~~
+
+이 예제에서 `loadPicture(from:completion:onFailure:)` 함수는 네트워크 작업을 백그라운드로 전달하고 네트워크 작업이 완료되면 두개의 완료 핸들러 중 하나를 호출합니다.
+
+이러한 방식으로 함수를 작성하면 두 상황을 모두 처리하는 하나의 클로저를 사용하는 대신 성공적인 다운로드 후 사용자 인터페이스를 업데이트하는 코드와 네트워크 오류 처리를 담당하는 코드를 명확하게 분리할 수 있습니다.
+
+> Note    
+> 완료 핸들러 (Completion handlers) 는 특히 여러 핸들러가 중첩되어 있으면 읽기 어려울 수 있습니다.
+> 또 다른 접근 방식은 [동시성 (Concurrency)]() 에서 설명된 대로 비동기 코드를 사용하는 것입니다.
+
+<br>
+
+## 캡처값 (Capturing Values)
 
 
 
