--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -449,8 +449,44 @@ loadPicture(from: someServer) { picture in
 
 ## 캡처값 (Capturing Values)
 
+클로저는 자신이 정의된 주변 컨텍스트에서 상수와 변수를 캡처 (capture) 할 수 있습니다.
 
+그러면 클로저는 상수와 변수를 정의한 원래 범위가 더이상 존재하지 않더라도 본문 내에서 해당 상수와 변수의 값을 참조하고 수정할 수 있습니다.
 
+#
+
+Swift 에서 값을 캡처할 수 있는 클로저의 가장 간단한 형태는 다른 함수의 본문 내에 작성하는 중첩 함수입니다.
+
+중첩 함수는 외부 함수의 인수를 캡처할 수 있으며 외부 함수 내에 정의된 상수 및 변수도 캡처할 수 있습니다.
+
+#
+
+아래는 `incrementer` 라는 중첩 함수가 포함된 `makeIncrementer` 라는 함수의 예입니다.
+
+중첩된 `incrementer()` 함수는 주변 컨텍스트에서 두값 `runningTotal` 과 `amount` 를 캡첩합니다.
+
+이 값을 캡처한 후 `incrementer` 는 호출될 때마다 `amount` 로 `runningTotal` 을 증가시키는 클로저로 `makeIncrementer` 에 의해 반환됩니다.
+
+~~~ swift
+func makeIncrementer(forIncrement amount: Int) -> () -> Int {
+    var runningTotal = 0
+    func incrementer() -> Int {
+        runningTotal += amount
+        return runningTotal
+    }
+    return incrementer
+}
+~~~
+
+`makeIncrementer` 의 반환 타입은 `() -> Int` 입니다.
+
+이것은 단순한 값이 아닌 함수를 반환한다는 의미입니다.
+
+반환되는 함수에는 파라미터가 없으며 호출될 때마다 `Int` 값을 반환합니다.
+
+함수가 다른 함수를 반환하는 방법을 알아보려면 [반환 타입으로의 함수 타입 (Function Types as Return Types)]() 을 참조하세요.
+
+#
 
 
 
