--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -296,7 +296,7 @@ someFunctionThatTakesAClosure() {
 
 #
 
-위의 [클로저 표현식 구문]() 섹션에 문자열 정렬 클로저는 `sorted(by:)` 메서드의 소괄호 외부에 후행 클로저로 작성할 수 있습니다.
+위의 [클로저 표현식 구문 (Closure Expression Syntax)]() 섹션에 문자열 정렬 클로저는 `sorted(by:)` 메서드의 소괄호 외부에 후행 클로저로 작성할 수 있습니다.
 
 ~~~ swift
 reversedNames = names.sorted() { $0 > $1 }
@@ -487,6 +487,97 @@ func makeIncrementer(forIncrement amount: Int) -> () -> Int {
 함수가 다른 함수를 반환하는 방법을 알아보려면 [반환 타입으로의 함수 타입 (Function Types as Return Types)]() 을 참조하세요.
 
 #
+
+`makeIncrementer(forIncrement:)` 함수는 반환될 현재 증가분을 저장하기 위해 `runningTotal` 이라는 정수 변수를 정의합니다.
+
+이 변수는 `0` 으로 초기화 됩니다.
+
+#
+
+`makeIncrementer(forIncrement:)` 함수는 인수 레이블이 `forIncrement` 이고 파라미터 이름이 `amount` 인 단일 파라미터가 있습니다.
+
+이 파라미터에 전달된 인수값은 반환된 증가 함수가 호출될 때마다 `runningTotal` 을 얼마나 증가시켜야 하는지 지정합니다.
+
+`makeIncrementer` 함수는 실제 증가를 수행하는 `incrementer` 라는 증첩 함수를 정의합니다.
+
+이 함수는 단순히 `runningTotal` 에 `amount` 를 더하고 그 결과를 반환합니다.
+
+#
+
+독립적으로 고려하면 `incrementer()` 함수는 비정상적으로 보일 수 있습니다.
+
+~~~ swift
+func incrementer() -> Int {
+    runningTotal += amount
+    return runningTotal
+}
+~~~
+
+`incrementer()` 함수는 파라미터가 없지만 함수 본문 내에서 `runningTotal` 과 `amount` 를 참조합니다.
+
+둘러싸인 함수의 `runningTotal` 과 `amount` 에 대한 참조를 캡처 하고 자체 함수 본문 내에서 사용하여 이를 수행합니다.
+
+참조를 캡처하는 것은 `makeIncrementer` 호출이 종료될 때 `runningTotal` 과 `amount` 가 사라지지 않고 다음에 `incrementer` 함수가 호출될 때 `runningTotal` 을 사용할 수 있습니다.
+
+> Note
+> 최적화로서 Swift 는 값이 클로저에 의해 변경되지 않고 클로저가 생성된 후 값이 변경되지 않는 경우 값의 복사본을 캡처하고 저장할 수 있습니다.
+> Swift 는 더이상 필요하지 않을때 변수를 처리하는 것과 관련된 모든 메모리 관리도 처리합니다.
+
+#
+
+다음은 `makeIncrementer` 동작에 대한 예입니다.
+
+~~~ swift
+let incrementByTen = makeIncrementer(forIncrement: 10)
+~~~
+
+이 예제에서는 호출될 때마다 `runningTotal` 변수에 `10` 을 더하는 증가 함수를 참조하기 위해 호출되는 `incrementByTen` 이라는 상수를 설정합니다.
+
+함수를 여러번 호출하면 다음과 같은 동작이 실제로 표시됩니다.
+
+~~~ swift
+incrementByTen()
+// returns a value of 10
+incrementByTen()
+// returns a value of 20
+incrementByTen()
+// returns a value of 30
+~~~
+
+#
+
+두번째 증가를 생성하면 새로운 별도의 `runningTotal` 변수에 대한 자체 저장된 참조를 갖게 됩니다.
+
+~~~ swift
+let incrementBySeven = makeIncrementer(forIncrement: 7)
+incrementBySeven()
+// returns a value of 7
+~~~
+
+#
+
+기존 증가 (`incrementByTen`) 을 다시 호출하면 자체 `runningTotal` 변수가 계속 증가하며 다음에 의해 캡처된 `incrementBySeven` 으로 캡처된 변수는 영향을 주지 않습니다.
+
+~~~ swift
+incrementByTen()
+// returns a value of 40
+~~~
+
+> Note    
+> 클래스 인스턴스의 프로퍼티에 클로저를 할당하고 클로저가 인스턴스 또는 해당 멤버를 참조하여 해당 인스턴스를 캡처하는 경우 클로저와 인스턴스 사이에 강한 참조 사이클이 생성됩니다.
+> Swift 는 캡처 리스트를 사용하여 이러한 강한 참조 사이클을 깨뜨립니다.
+> 자세한 내용은 [클로저의 강한 참조 사이클 (Strong Reference Cycles for Closures)]() 를 참조하세요.
+
+<br>
+
+## 클로저는 참조 타입 (Closures Are Reference Types)
+
+
+
+
+
+
+
 
 
 
