--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -572,7 +572,37 @@ incrementByTen()
 
 ## 클로저는 참조 타입 (Closures Are Reference Types)
 
+위의 예제에서 `incrementBySeven` 과 `incrementByTen` 은 상수이지만 이러한 상수가 참조하는 클로저는 캡처한 `runningTotal` 변수를 계속 증가시킬 수 있습니다.
 
+이는 함수와 클로저가 참조 타입 (reference types) 이기 때문입니다.
+
+#
+
+함수 또는 클로저를 상수 또는 변수에 할당할 때마다 실제로 해당 상수 또는 변수를 함수 또는 클로저에 대한 참조로 설정합니다.
+
+위의 예제에서 `incrementByTen` 은 클로저 자체의 내용이 아니라 상수를 참조하는 클로저의 선택입니다.
+
+#
+
+이것은 또한 서로 다른 2개의 상수 또는 변수에 클로저를 할당하는 경우 해당 상수 또는 변수 모두 동일한 클로저를 참조한다는 의미 입니다.
+
+~~~ swift
+let alsoIncrementByTen = incrementByTen
+alsoIncrementByTen()
+// returns a value of 50
+
+
+incrementByTen()
+// returns a value of 60
+~~~
+
+위의 예제는 `alsoIncrementByTen` 호출이 `incrementByTen` 호출과 동일함을 보여줍니다.
+
+2개 모두 동일한 클로저를 참조하기 때문에 둘다 동일한 누계를 증가시키고 반환합니다.
+
+<br>
+
+## 이스케이핑 클로저 (Escaping Closures)
 
 
 
