--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -604,6 +604,137 @@ incrementByTen()
 
 ## 이스케이핑 클로저 (Escaping Closures)
 
+함수에 인수로 클로저를 전달하지만 함수가 반환된 후 호출되는 클로저를 함수를 탈출 (escape) 하다 라고 말합니다.
+
+클로저를 파라미터 중 하나로 취하는 함수를 선언할 때 이 클로저는 탈출을 허락한다는 의미로 파라미터의 타입 전에 `@escaping` 을 작성할 수 있습니다.
+
+#
+
+클로저가 탈출할 수 있는 한가지 방법은 함수 외부에 정의된 변수에 저장하는 것입니다.
+
+예를 들어 비동기적 작업을 시작하는 많은 함수는 클로저 인수를 완료 핸들러로 사용합니다.
+
+이 함수는 작업을 시작한 후에 반환하지만 작업이 완료될때까지 클로저가 호출되지 않습니다.
+
+클로저는 나중에 호출하려면 탈출해야 합니다.
+
+~~~ swift
+var completionHandlers: [() -> Void] = []
+func someFunctionWithEscapingClosure(completionHandler: @escaping () -> Void) {
+    completionHandlers.append(completionHandler)
+}
+~~~
+
+`someFunctionWithEscapingClosure(_:)` 함수는 인수로 클로저를 가지고 있고 이를 함수 외부에 선언된 배열에 추가합니다.
+
+이 함수의 파라미터를 `@escaping` 으로 표시하지 않으면 컴파일 타임에 에러가 발생합니다.
+
+#
+
+클래스의 인스턴스를 참조하는 경우 `self` 를 참조하는 이스케이프 클로저에 특별한 고려가 필요합니다.
+
+이스케이프 클로저에 `self` 캡처는 강한 참조 사이클이 생기기 쉽습니다.
+
+참조 사이클에 대한 자세한 내용은 [자동 참조 카운팅 (Automatic Reference Counting)]() 을 참조 하세요.
+
+#
+
+일반적으로 클로저는 클로저 본문에서 변수를 사용하여 암시적으로 변수를 캡처하지만 이 경우 명시적이어야 합니다.
+
+`self` 를 캡처하려면 사용할 때 명시적으로 `self` 를 작성하거나 클로저의 캡처 리스트에 `self` 를 포함합니다.
+
+명시적으로 `self` 를 작성하면 의도를 표현할 수 있고 참조 사이클이 없음을 확인하도록 상기시켜 줍니다.
+
+#
+
+예를 들어 아래 코드에서 `someFunctionWithEscapingClosure(_:)` 에 전달된 클로저는 명시적으로 `self` 를 참조합니다.
+
+반대로 `someFunctionWithNonescapingClosure(_:)` 에 전달된 클로저는 탈출하지 않는 클로저 입니다.
+
+즉 암시적으로 `self` 를 참조할 수 있습니다.
+
+~~~ swift
+func someFunctionWithNonescapingClosure(closure: () -> Void) {
+    closure()
+}
+
+
+class SomeClass {
+    var x = 10
+    func doSomething() {
+        someFunctionWithEscapingClosure { self.x = 100 }
+        someFunctionWithNonescapingClosure { x = 200 }
+    }
+}
+
+
+let instance = SomeClass()
+instance.doSomething()
+print(instance.x)
+// Prints "200"
+
+
+completionHandlers.first?()
+print(instance.x)
+// Prints "100"
+~~~
+
+#
+
+다음은 클로저의 캡처 리스트에 `self` 를 캡처하고 암시적으로 `self` 를 참조하는 `doSomething()` 버전 입니다.
+
+~~~ swift
+class SomeOtherClass {
+    var x = 10
+    func doSomething() {
+        someFunctionWithEscapingClosure { [self] in x = 100 }
+        someFunctionWithNonescapingClosure { x = 200 }
+    }
+}
+~~~
+
+#
+
+`self` 가 구조체 또는 열거형의 인스턴스인 경우 언제든지 암시적으로 `self` 를 참조할 수 있습니다.
+
+그러나 이스케이프 클로저는 구조체 도는 열거형의 인스턴스인 경우 `self` 에 대한 변경 가능한 참조를 캡처할 수 없습니다.
+
+구조체와 열거형은 [구조체와 열거형은 값타입 (Structures and Enumerations Are Value Types)]() 에서 설명한 대로 공유 가변성을 허용하지 않습니다.
+
+~~~ swift
+struct SomeStruct {
+    var x = 10
+    mutating func doSomething() {
+        someFunctionWithNonescapingClosure { x = 200 }  // Ok
+        someFunctionWithEscapingClosure { x = 100 }     // Error
+    }
+}
+~~~
+
+위 예제에서 `someFunctionWithEscapingClosure` 함수 호출은 변경 가능한 메서드 내부에 있기 때문에 에러이고 `self` 는 변경 가능합니다.
+
+이것은 이스케이프 클로저는 구조체인 `self` 를 변경가능한 참조로 캡처할 수 없다는 규칙을 위반합니다.
+
+<br>
+
+## 자동 클로저 (Autoclosures)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
