--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -719,47 +719,121 @@ struct SomeStruct {
 
 ## 자동 클로저 (Autoclosures)
 
+자동 클로저 (autoclosure) 는 함수에 인수로 전달되는 표현식을 래핑하기 위해 자동으로 생성되는 클로저입니다.
+
+인수를 사용하지 않으며 호출되면 내부에 포함된 표현식의 값을 반환합니다.
+
+이러한 구문상의 편리함을 통해 명시적 클로저 대신 일반 표현식을 작성하여 함수 파라미터 주위의 중괄호를 생략할 수 있습니다.
+
+#
+
+자동 클로저를 가지는 함수를 호출하는 것은 일반적이지만 이러한 함수를 구현하는 것은 일반적이지 않습니다.
+
+예를 들어 `assert(condition:message:file:line:)` 함수는 `condition` 과 `message` 파라미터에 대해 자동 클로저를 사용합니다.
+
+해당 `condition` 파라미터는 오직 디버그 빌드인지 판단하고 `message` 파라미터는 `condition` 이 `false` 인지만 판단합니다.
+
+#
+
+자동 클로저를 사용하면 평가를 지연할 수 있습니다.
+
+클로저를 호출할 때까지 내부 코드가 실행되지 않기 때문입니다.
+
+평가를 지연하면 해당 코드가 평가되는 시점을 제어할 수 있으므로 사이드 이펙트가 있거나 계산이 오래 걸리는 코드에 유용합니다.
+
+아래 코드는 클로저가 평가를 지연시키는 방법을 보여줍니다.
+
+~~~ swift
+var customersInLine = ["Chris", "Alex", "Ewa", "Barry", "Daniella"]
+print(customersInLine.count)
+// Prints "5"
 
 
+let customerProvider = { customersInLine.remove(at: 0) }
+print(customersInLine.count)
+// Prints "5"
 
 
+print("Now serving \(customerProvider())!")
+// Prints "Now serving Chris!"
+print(customersInLine.count)
+// Prints "4"
+~~~
+
+클로저 내부의 코드에 의해 `customersInLine` 배열의 첫번째 요소가 제거되더라도 클로저가 실제로 호출될 때까지 배열 요소는 제거되지 않습니다.
+
+클로저가 호출되지 않으면 클로저 내부의 표현식이 평가되지 않습니다.
+
+이것은 배열 요소가 제거되지 않음을 의미합니다.
+
+`customerProvider` 의 타입은 `String` 이 아니고 문자열을 반환하고 파라미터가 없는 `() -> String` 입니다.
+
+#
+
+클로저를 함수에 인수로 전달할 때 위와 같은 지연 평가와 동일한 동작을 얻습니다.
+
+~~~ swift
+// customersInLine is ["Alex", "Ewa", "Barry", "Daniella"]
+func serve(customer customerProvider: () -> String) {
+    print("Now serving \(customerProvider())!")
+}
+serve(customer: { customersInLine.remove(at: 0) } )
+// Prints "Now serving Alex!"
+~~~
+
+`serve(customer:)` 함수는 소비자의 이름을 반환하는 명시적인 클로저를 가집니다.
+
+아래 `serve(customer:)` 의 버전은 동일한 작업을 수행하지만 명시적인 클로저를 사용하는 대신 파라미터 타입을 `@autoclosure` 속성으로 표시하여 자동 클로저를 사용합니다.
+
+이제 클로저 대신 `String` 인수를 받는 것처럼 함수를 호출할 수 있습니다.
+
+`customerProvider` 파라미터의 타입은 `@autoclosure` 속성으로 표시되기 때문에 인수는 자동으로 클로저로 변환됩니다.
+
+~~~ swift
+// customersInLine is ["Ewa", "Barry", "Daniella"]
+func serve(customer customerProvider: @autoclosure () -> String) {
+    print("Now serving \(customerProvider())!")
+}
+serve(customer: customersInLine.remove(at: 0))
+// Prints "Now serving Ewa!"
+~~~
+
+> Note     
+> 자동 클로저를 과도하게 사용하면 코드를 이해하기 어려울 수 있습니다.
+> 컨텍스트와 함수 이름은 평가가 연기되고 있음을 분명히 해야합니다.
+
+#
+
+자동 클로저가 이스케이프를 허용하길 원한다면 `@autoclosure` 와 `@escaping` 속성을 둘다 사용하면 됩니다.
+
+`@escaping` 속성은 위의 [이스케이핑 클로저 (Escaping Closures)]() 에서 설명되어 있습니다.
+
+~~~ swift
+// customersInLine is ["Barry", "Daniella"]
+var customerProviders: [() -> String] = []
+func collectCustomerProviders(_ customerProvider: @autoclosure @escaping () -> String) {
+    customerProviders.append(customerProvider)
+}
+collectCustomerProviders(customersInLine.remove(at: 0))
+collectCustomerProviders(customersInLine.remove(at: 0))
 
 
+print("Collected \(customerProviders.count) closures.")
+// Prints "Collected 2 closures."
+for customerProvider in customerProviders {
+    print("Now serving \(customerProvider())!")
+}
+// Prints "Now serving Barry!"
+// Prints "Now serving Daniella!"
+~~~
 
+위의 코드에서 `customerProvider` 인수로 전달된 클로저를 호출하는 대신 `collectCustomerProviders(_:)` 함수는 클로저를 `customerProviders` 배열에 추가합니다.
 
+이 배열은 함수 범위 외부에 선언됩니다.
 
+이것은 함수가 반환된 후에 배열의 클로저가 실행될 수 있음을 의미합니다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+결과적으로 `customerProvider` 인수의 값은 함수의 범위를 벗어날 수 있어야 합니다.
 
 ***
 
