--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -1,5 +1,56 @@
 # Enumerations (열거형)
 
+가능한 값 목록을 정의하는 사용자 정의 타입을 모델링합니다.
+
+#
+
+열거형 (enumeration) 은 관련된 값의 그룹에 대한 공통 타입을 정의하고 코드 내부에서 타입-세이프 한 방식으로 해당 값을 사용할 수 있도록 해줍니다.
+
+#
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
