--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -8,6 +8,41 @@
 
 #
 
+C 에 익숙하다면 C 열거형이 정수값을 설정하기 위해 연관된 이름을 할당하는 것을 알 것 입니다.
+
+Swift 의 열거형은 훨씬 유연하고 열거형의 각 케이스에 대해 값을 제공할 필요가 없습니다.
+
+각 열거형 케이스에 대해 값 (원시값) 이 제공되는 경우 값은 문자열, 문자 또는 정수 또는 부동 소수 타입의 값일 수 있습니다.
+
+#
+
+또는 열거형 케이스는 각각의 다른 케이스 값과 함께 저장될 모든 타입의 연관값을 지정할 수 있습니다.
+
+관련 케이스의 공통 세트를 하나의 열거형의 일부로 정의할 수 있습니다.
+
+각 열거형에는 연관된 적절한 타입의 서로 다른 값 세트가 있습니다.
+
+#
+
+Swift 의 열거형은 그 자체로 1급 타입입니다.
+
+열거형의 현재 값에 대한 추가 정보를 제공하는 계산 프로퍼티와 열거형이 나타내는 값과 관련된 기능을 제공하는 인스턴스 메서드 등 전통적으로 클래스에서만 지원되는 많은 기능을 채택합니다.
+
+열거형은 초기 케이스 값을 제공하기 위해 초기화를 정의할 수도 있습니다.
+
+기존 구현을 넘어 기능적으로 확장될 수도 있습니다.
+
+표준 기능을 제공하기 위해 프로토콜을 준수할 수 있습니다.
+
+#
+
+이러한 기능에 대한 자세한 내용은 [프로퍼티 (Properties)](), [메서드 (Methods)](), [초기화 (Initialization)](), [확장 (Extensions)]() 과 [프로토콜 (Protocols)]() 을 참조하세요.
+
+<br>
+
+## 열거형 구문 (Enumeration Syntax)
+
+
 
 
 
