--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -42,13 +42,90 @@ Swift 의 열거형은 그 자체로 1급 타입입니다.
 
 ## 열거형 구문 (Enumeration Syntax)
 
+`enum` 키워드를 사용하여 열거형을 도입하고 전체 정의를 중괄호 안에 배치합니다.
 
+~~~ swift
+enum SomeEnumeration {
+    // enumeration definition goes here
+}
+~~~
 
+#
 
+다음 예제는 나침반의 4가지 주요 지점을 나타냅니다.
 
+~~~ swift
+enum CompassPoint {
+    case north
+    case south
+    case east
+    case west
+}
+~~~
 
+열거형에 정의된 값 (`north`, `south`, `east`, `west`) 은 열거형 케이스 (enumeration cases) 입니다.
 
+`case` 키워드를 사용하여 새로운 열거형 케이스를 나타냅니다.
 
+> Note    
+> Swift 열거형 케이스는 C 와 Objective-C 처럼 기본적으로 정수값이 설정되어 있지 않습니다.
+> 위의 예제 `CompassPoint` 에 `north`, `south`, `east`, `west` 는 `0`, `1`, `2`, `3` 과 같지 않습니다.
+> 대신 다양한 열거형 케이스는 `CompassPoint` 의 명시적으로 정의된 타입을 사용하여 그 자체로 값입니다.
+
+#
+
+여러개의 케이스는 콤마로 구분하여 한줄로 나타낼 수 있습니다.
+
+~~~ swift
+enum Planet {
+    case mercury, venus, earth, mars, jupiter, saturn, uranus, neptune
+}
+~~~
+
+#
+
+각 열거형 정의는 새로운 타입을 정의합니다.
+
+Swift 의 다른 타입처럼 이름 (`CompassPoint` 와 `Planet`) 은 대문자로 시작합니다.
+
+열거형 타입에 복수형 이름이 아닌 단수형 이름을 지정하면 읽기 쉽습니다.
+
+~~~ swift
+var directionToHead = CompassPoint.west
+~~~
+
+`directionToHead` 의 타입은 `CompassPoint` 의 가능한 값 중 하나로 초기화 될 때 유추됩니다.
+
+`directionToHead` 가 `CompassPoint` 로 선언되면 더 짧은 점 구문을 사용하여 다른 `CompassPoint` 값으로 설정할 수 있습니다.
+
+~~~ swift
+directionToHead = .east
+~~~
+
+`directionToHead` 의 타입은 이미 알고 있으므로 해당 값을 설정할 때 타입을 삭제할 수 있습니다.
+
+이는 명시적으로 타입이 지정된 열거형 값으로 작업할 때 읽기 쉬운 코드를 만듭니다.
+
+<br>
+
+## 스위치 구문에서 열거형 값 일치 (Matching Enumeration Values with Switch Statement)
+
+각각의 열거형 값을 `switch` 구문과 일치시킬 수 있습니다.
+
+~~~ swift
+directionToHead = .south
+switch directionToHead {
+case .north:
+    print("Lots of planets have a north")
+case .south:
+    print("Watch out for penguins")
+case .east:
+    print("Where the sun rises")
+case .west:
+    print("Where the skies are blue")
+}
+// Prints "Watch out for penguins"
+~~~
 
 
 
