--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -127,6 +127,38 @@ case .west:
 // Prints "Watch out for penguins"
 ~~~
 
+이 코드는 아래와 같이 읽을 수 있습니다.
+
+"`directionToHead` 값을 고려합니다. `.north` 와 같은 케이스일 경우 `"Lots of planets have a north"` 를 출력합니다. `.south` 와 같은 케이스일 경우 `"Watch out for penguins"` 를 출력합니다."
+
+등등
+
+[제어 흐름 (Control Flow)]() 에서 설명 했듯이 열거형 케이스를 고려할 때 `switch` 구문은 철저해야 합니다.
+
+`.west` 에 대한 `case` 가 생략 되면 이 코드는 `CompassPoint` 케이스에 대한 전체 케이스 목록을 고려하지 않기 때문에 컴파일되지 않습니다.
+
+완전성을 요구하면 열거형 케이스가 실수로 생략되는 일이 발생하지 않습니다.
+
+#
+
+모든 열거형 케이스에 대해 `case` 를 제공하는 것이 적절하지 않은 경우 명시적으로 처리되지 않은 모든 케이스를 포함하는 `default` 케이스를 제공할 수 있습니다.
+
+~~~ swift
+let somePlanet = Planet.earth
+switch somePlanet {
+case .earth:
+    print("Mostly harmless")
+default:
+    print("Not a safe place for humans")
+}
+// Prints "Mostly harmless"
+~~~
+
+<br>
+
+## 열거형 케이스 반복 (Iterating over Enumeration Cases)
+
+
 
 
 
