--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -158,9 +158,45 @@ default:
 
 ## 열거형 케이스 반복 (Iterating over Enumeration Cases)
 
+일부 열거형의 경우 열거형의 모든 케이스를 수집하는 것이 유용합니다.
 
+열거형 이름 뒤에 `: CaseIterable` 을 작성하여 활성화 합니다.
 
+Swift 는 열거형 타입에 `allCases` 프로퍼티로 모든 케이스의 컬렉션을 노출합니다.
 
+~~~ swift
+enum Beverage: CaseIterable {
+    case coffee, tea, juice
+}
+let numberOfChoices = Beverage.allCases.count
+print("\(numberOfChoices) beverages available")
+// Prints "3 beverages available"
+~~~
+
+위의 예제에서 `Beverage` 열거형의 모든 케이스가 포함된 컬렉션에 접근하기 위해 `Beverage.allCases` 를 작성합니다.
+
+다른 컬렉션 처럼 `allCases` 를 사용할 수 있습니다.
+
+컬렉션의 요소는 열거형 타입의 인스턴스이므로 이 경우 `Beverage` 값입니다.
+
+위의 예제는 케이스의 갯수를 계산하고 아래 예제는 `for-in` 루프를 사용하여 모든 케이스를 반복합니다.
+
+~~~ swift
+for beverage in Beverage.allCases {
+    print(beverage)
+}
+// coffee
+// tea
+// juice
+~~~
+
+위의 예제에서 사용된 구문은 열거형이 `CaseIterable` 프로토콜을 준수하는 것으로 표시합니다.
+
+프로토콜에 대한 자세한 내용은 [프로토콜 (Protocols)]() 을 참조하세요.
+
+<br>
+
+## 연관된 값 (Associated Values)
 
 
 
