--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -198,10 +198,51 @@ for beverage in Beverage.allCases {
 
 ## 연관된 값 (Associated Values)
 
+이전 섹션의 예제는 열거형의 케이스가 어떻게 정의되고 그 자체로 정의된 값인 방법을 보여줍니다.
+
+상수 또는 변수를 `Planet.earth` 로 설정하고 나중에 이 값을 확인할 수 있습니다.
+
+그러나 이러한 케이스 값과 함께 다른 타입의 값을 저장할 수 있으면 유용한 경우가 있습니다.
+
+이 추가 정보를 연관값 (associated value) 이라고 하며 해당 케이스를 코드에서 값으로 사용할 때마다 달라집니다.
+
+#
+
+Swift 열거형을 정의하여 특정 타입의 연관값을 저장할 수 있으며 필요한 경우 열거형의 각 케이스마다 값 타입이 다를 수 있습니다.
+
+이와 유사한 열겨형은 다른 프로그래밍 언어에서 식별된 집합체 (discriminated unions), 태그된 집합체 (tagged unions) 또는 변형 가능한 집합체 (variants) 로 알려져 있습니다.
+
+#
+
+예를 들어 재고 추적 시스템이 2가지 타입의 바코드로 제품을 처적해야 한다고 가정해 보겠습니다.
+
+일부 제품에는 숫자 `0` 에서 `9` 를 사용하는 UPC 형식의 1D 바코드가 부착되어 있습니다.
+
+각 바코드에는 숫자 시스템과 그 뒤에 5자리의 제조업체 코드 숫자와 5자리의 제품 코드 숫자가 있습니다.
+
+그 뒤에는 코드가 올바르게 스캔되었는지 확인하기 위한 검사 숫자가 있습니다.
+
+<img width="400" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/36cfc278-ae10-46dd-8de6-70ff78ba0ec4">
+
+#
+
+다른 제품에는 ISO 8859-1 문자를 사용할 수 있고 최대 2,953개의 문자까지 인코딩할 수 있는 QR 코드 형식의 2D 바코드가 부착되어 있습니다.
 
 
+<img width="300" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/095e7a0a-008b-4357-a24e-b730b399d6ba">
 
+재고 추적 시스템은 UPC 바코드를 4개의 정수로 구성된 튜플로 저장하고 QR 코드 바코드를 임의 길이의 문자열로 저장하는 것이 편리합니다.
 
+#
+
+Swift 에서 두 타입의 제품 바코드를 정의하는 열거형은 다음과 같습니다.
+
+~~~ swift
+enum Barcode {
+    case upc(Int, Int, Int, Int)
+    case qrCode(String)
+}
+~~~
 
 
 
