--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -244,9 +244,71 @@ enum Barcode {
 }
 ~~~
 
+이 코드는 아래와 같이 읽을 수 있습니다.
 
+"(`Int, Int, Int, Int`) 타입의 연관값이 있는 `upc` 또는 `String` 타입의 연관값이 있는 `qrCode` 를 사용할 수 있는 `Barcode` 라는 열거형 타입을 정의합니다."
 
+이 정의는 실제 `Int` 또는 `String` 값을 제공하지 않습니다.
 
+단지 `Barcode` 상수 또는 변수가 `Barcode.upc` 또는 `Barcode.qrCode` 와 같을 때 저장할 수 있는 연관값의 타입을 정의할 뿐입니다.
+
+#
+
+그러면 이러한 타입을 사용하여 새로운 바코드를 생성할 수 있습니다.
+
+~~~ swift
+var productBarcode = Barcode.upc(8, 85909, 51226, 3)
+~~~
+
+이 예제는 `productBarcode` 라는 새로운 변수를 생성하고 해당 변수에 연관된 튜플값인 `(8, 85909, 51226, 3)` 를 `Barcode.upc` 의 값으로 할당합니다.
+
+#
+
+동일한 상품에 다른 바코드 타입을 할당할 수 있습니다.
+
+~~~ swift
+productBarcode = .qrCode("ABCDEFGHIJKLMNOP")
+~~~
+
+이 시점에서 기존의 `Barcode.upc` 와 해당 정수 값은 새로운 `Barcode.qrCode` 와 해당 문자열 값으로 대체됩니다.
+
+`Barcode` 타입의 상수와 변수는 `.upc` 또는 `.qrCode` 를 연관값과 함께 저장할 수 있지만 오직 하나의 값만 저장할 수 있습니다.
+
+#
+
+[스위치 구문에서 열거형 값 일치 (Matching Enumeration Value with a Switch Statement)]() 에서의 예제와 유사한 스위치 구문을 사용하여 다양한 바코드 타입을 확인할 수 있습니다.
+
+그러나 이번에는 연관값이 스위치 구문의 일부로 추출됩니다.
+
+`switch` 케이스 본문 내에서 사용하기 위해 상수 (`let` 접두사) 또는 변수 (`var` 접두사) 로 각 연관된 값을 추출합니다.
+
+~~~ switch
+switch productBarcode {
+case .upc(let numberSystem, let manufacturer, let product, let check):
+    print("UPC: \(numberSystem), \(manufacturer), \(product), \(check).")
+case .qrCode(let productCode):
+    print("QR code: \(productCode).")
+}
+// Prints "QR code: ABCDEFGHIJKLMNOP."
+~~~
+
+#
+
+열거형 케이스에 대한 연관된 값이 모두 상수로 추출되거나 모두 변수로 추출되는 경우 간결성을 위해 케이스 이름 앞에 `let` 또는 `var` 를 선언하면 됩니다.
+
+~~~ swift
+switch productBarcode {
+case let .upc(numberSystem, manufacturer, product, check):
+    print("UPC : \(numberSystem), \(manufacturer), \(product), \(check).")
+case let .qrCode(productCode):
+    print("QR code: \(productCode).")
+}
+// Prints "QR code: ABCDEFGHIJKLMNOP."
+~~~
+
+<br>
+
+## 원시값 (Raw Values)
 
 
 
