--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -310,6 +310,42 @@ case let .qrCode(productCode):
 
 ## 원시값 (Raw Values)
 
+[연관된 값 (Associated Values)]() 에서의 바코드 예제는 열거형 케이스의 연관된 값을 저장하도록 선언할 수 있는 방법을 보여줍니다.
+
+연관된 값의 대안으로 열거형 케이스에는 모두 동일한 타입의 기본값 (원시값) 으로 미리 채워질 수 있습니다.
+
+#
+
+다음은 명명된 열거형 케이스와 함께 원시 ASCII 값을 저장하는 예입니다.
+
+~~~ swift
+enum ASCIIControlCharacter: Character {
+    case tab = "\t"
+    case lineFeed = "\n"
+    case carriageReturn = "\r"
+}
+~~~
+
+여기서 `ASCIIControlCharacter` 라는 열거형의 원시값은 `Character` 타입으로 정의되고 일반적인 ASCII 제어 문자 중 일부로 설정됩니다.
+
+`Character` 값은 [문자열과 문자 (Strings and Characters)]() 에 설명되어 있습니다.
+
+#
+
+원시값은 문자열, 문자 또는 정수 또는 부동소수점 숫자 타입이 가능합니다.
+
+각 원시값은 열거형 선언부 내에서 유일한 값이어야 합니다.
+
+> Note    
+> 원시값은 연관값과 동일하지 않습니다.
+> 원시값은 위의 3가지 ASCII 코드와 같이 코드에서 열거형을 처음 정의할 때 미리 설정하는 값입니다.
+> 특정 열거형 케이스를 위한 원시값은 항상 같습니다.
+> 연관된 값은 열거형 케이스 중 하나를 기반으로 새로운 상수 또는 변수를 생성할 때 설정되며 그렇게 할 때마다 달라질 수 있습니다.
+
+<br>
+
+### 암시적으로 할당된 원시값 (Implicitly Assigned Raw Values)
+
 
 
 
