--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -346,12 +346,56 @@ enum ASCIIControlCharacter: Character {
 
 ### 암시적으로 할당된 원시값 (Implicitly Assigned Raw Values)
 
+정수 또는 문자열 원시값을 저장하는 열거형으로 작업할 때 각 케이스에 대해 원시값을 명시적으로 할당할 필요가 없습니다.
+
+원시값을 설정하지 않으면 Swift 가 자동으로 값을 할당합니다.
+
+#
+
+예를 들어 원시값에 정수가 사용되는 경우 각 케이스의 암시적 값은 이전 케이스보다 1이 더 큽니다.
+
+첫번째 케이스에 값이 설정되어 있지 않다면 `0` 으로 설정합니다.
+
+#
+
+아래의 열거형은 태양으로 부터 각 행성의 순서를 정수값으로 나타내는 이전 `Planet` 열거형의 변형된 버전입니다.
+
+~~~ swift
+enum Planet: Int {
+    case mercury = 1, venus, earth, mars, jupiter, saturn, uranus, neptune
+}
+~~~
+
+위의 예제에서 `Planet.mercury` 는 명시적으로 원시값 `1` 을 가지고 `Planet.venus` 는 암시적으로 원시값 `2` 를 가집니다.
+
+#
+
+원시값으로 문자열이 사용되는 경우 각 케이스에 대한 암시적 값은 해당 케이스 이름의 문자입니다.
+
+아래의 열거형은 각 방향의 이름을 문자열 원시값으로 나타내는 이전 `CompassPoint` 열거형의 변형된 버전입니다.
+
+~~~ swift
+enum CompassPoint: String {
+    case north, south, east, west
+}
+~~~
+
+위의 예제에서 `CompassPoint.south` 는 `"south"` 의 암시적 원시값을 가지고 있습니다.
+
+`rawValue` 프로퍼티를 사용하여 열거형 케이스의 원시값에 접근할 수 있습니다.
+
+~~~ swift
+let earthsOrder = Planet.earth.rawValue
+// earthsOrder is 3
 
 
+let sunsetDirection = CompassPoint.west.rawValue
+// sunsetDirection is "west"
+~~~
 
+<br>
 
-
-
+### 원시값으로 초기화 (Initializing from a Raw Value)
 
 
 
