--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -397,6 +397,59 @@ let sunsetDirection = CompassPoint.west.rawValue
 
 ### 원시값으로 초기화 (Initializing from a Raw Value)
 
+원시값 타입으로 열거형을 정의하는 경우 원시값의 타입 (`rawValue` 라는 파라미터) 의 값을 사용하고 열거형 케이스 또는 `nil` 을 반환하는 초기화를 자동으로 받습니다.
+
+이 초기화를 사용하여 열거형의 새 인스턴스를 생성할 수 있습니다.
+
+#
+
+이 예제는 `7` 원시값을 통해 천왕성을 식별합니다.
+
+~~~ swift
+let possiblePlanet = Planet(rawValue: 7)
+// possiblePlanet is of type Planet? and equals Planet.uranus
+~~~
+
+그러나 가능한 모든 `Int` 값이 일치하는 행성을 찾지는 않습니다.
+
+이 때문에 원시값 초기화는 항상 옵셔널 열거형 케이스를 반환합니다.
+
+위의 예제에서 `possiblePlanet` 은 `Planet?` 또는 "옵셔널 `Planet`" 타입입니다.
+
+> Note    
+> 원시값 초기화는 모든 원시값을 열거형 케이스로 반환할 수 없기 때문에 초기화가 실패할 수 있습니다.
+> 더 자세한 내용은 [실패 가능한 초기화 구문 (Failable Initializers)]() 를 참조하세요.
+
+#
+
+만약 `11` 의 위치로 행성을 찾는다면 원시값 초기화로 부터 반환된 옵셔널 `Planet` 값은 `nil` 입니다.
+
+~~~ swift
+let positionToFind = 11
+if let somePlanet = Planet(rawValue: positionToFind) {
+    switch somePlanet {
+    case .earth:
+        print("Mostly harmless")
+    default:
+        print("Not a safe place for humans")
+    }
+} else {
+    print("There isn't a planet at position \(positionToFind)")
+}
+// Prints "There isn't a planet at position 11"
+~~~
+
+이 예제에서는 `11` 의 원시값으로 행성을 찾기위해 옵셔널 바인딩을 사용합니다.
+
+`if let somePlanet = Planet(rawValue: 11)` 구문은 옵셔널 `Planet` 을 생성하고 가져올 수 있다면 옵셔널 `Planet` 의 값을 `somePlanet` 에 할당합니다.
+
+이 경우 `11` 의 위치로 행성을 가져올 수 없으므로 대신 `else` 분기가 실행됩니다.
+
+<br>
+
+## 재귀 열거형 (Recursive Enumerations)
+
+
 
 
 
