--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -449,24 +449,83 @@ if let somePlanet = Planet(rawValue: positionToFind) {
 
 ## 재귀 열거형 (Recursive Enumerations)
 
+재귀 열거형 (recursive enumeration) 은 열거형 케이스에 하나 이상의 연관된 값으로 열거형의 또 다른 인스턴스를 갖는 열거형입니다.
+
+열거형 케이스 앞에 `indirect` 를 작성하여 컴파일러에게 필요한 간접 (indirection) 참조 계층을 삽입하도록 지시함으로써 열거형 케이스가 재귀적임을 나타냅니다.
+
+#
+
+예를 들어 다음은 간단한 산술 표현식을 저장하는 열거형입니다.
+
+~~~ swift
+enum ArithmeticExpression {
+    case number(Int)
+    indirect case addition(ArithmeticExpression, ArithmeticExpression)
+    indirect case multiplication(ArithmeticExpression, ArithmeticExpression)
+}
+~~~
+
+#
+
+열거형 시작 앞에 `indirect` 를 작성하여 연관된 값을 가진 모든 열거형 케이스에 간접을 활성화할 수 있습니다.
+
+~~~ swift
+indirect enum ArithmeticExpression {
+    case number(Int)
+    case addition(ArithmeticExpression, ArithmeticExpression)
+    case multiplication(ArithmeticExpression, ArithmeticExpression)
+}
+~~~
+
+이 열거형은 숫자, 2개의 표현식의 덧셈, 2개의 표현식의 곱셈 이렇게 3가지 산술표현식을 저장할 수 있습니다.
+
+`addition` 과 `multiplication` 케이스는 산술 표현식인 연관된 값을 가지고 있습니다.
+
+이러한 연관된 값을 사용하면 표현식을 중첩할 수 있습니다.
+
+예를 들어 `(5 + 4) * 2` 표현식은 곱셈의 우항에는 하나의 숫자를 가지고 있고 좌항은 다른 표현식을 가지고 있습니다.
+
+데이터는 중첩되기 때문에 데이터를 저장하는 열거형도 중첩을 지원해야 합니다.
+
+즉 열거형은 재귀적이어야 합니다.
+
+#
+
+아래 코드는 `(5 + 4) * 2` 에 대해 생성되는 `ArithmeticExpression` 재귀 열거형을 나타냅니다.
+
+~~~ swift
+let five = ArithmeticExpression.number(5)
+let four = ArithmeticExpression.number(4)
+let sum = ArithmeticExpression.addition(five, four)
+let product = ArithmeticExpression.multiplication(sum, ArithmeticExpression.number(2))
+~~~
+
+#
+
+재귀 함수는 재귀 구조를 가진 데이터로 작업하는 간단한 방법입니다.
+
+예를 들어 다음은 산술 표현식을 판단하는 함수입니다.
+
+~~~ swift
+func evaluate(_ expression: ArithmeticExpression) -> Int {
+    switch expression {
+    case let .number(value):
+        return value
+    case let .addition(left, right):
+        return evaluate(left) + evaluate(right)
+    case let .multiplication(left, right):
+        return evaluate(left) * evaluate(right)
+    }
+}
 
 
+print(evaluate(product))
+// Prints "18"
+~~~
 
+이 함수는 단순히 연관된 값을 반환하여 숫자를 판단합니다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+좌항의 식을 평가하고 우항의 식을 평가한 다음 이를 더하거나 곱하여 덧셈 또는 곱셈을 판단합니다.
 
 ***
 
