--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -1,5 +1,70 @@
 # Structures and Classes (구조체와 클래스)
 
+데이터를 캡슐화하는 사용자 정의 타입을 모델링합니다.
+
+#
+
+구조체 (Structures) 와 클래스 (Classes) 는 프로그램 코드의 구성 요소가 되는 범용적이고 유연한 구성입니다.
+
+상수, 변수, 함수를 정의하는 것과 같은 구문을 사용하여 구조체와 클래스에 기능을 추가하는 프로퍼티와 메서드를 정의합니다.
+
+#
+
+다른 프로그래밍 언어와 달리 Swift 는 사용자 정의 구조체와 클래스에 대해 별도의 인터페이스 및 구현 파일을 만들 필요가 없습니다.
+
+Swift 에서는 단일 파일에 구조체 또는 클래스를 정의하면 해당 클래스 또는 구조체에 대한 외부 인터페이스가 자동으로 다른 코드에서 사용할 수 있습니다.
+
+> Note    
+> 클래스의 인스턴스는 전통적으로 객체 (object) 라고 알고 있습니다.
+> 그러나 Swift 구조체와 클래스는 다른 언어보다 기능면에서 훨씬 가깝고 이 챕터의 대부분은 클래스 또는 구조체 타입의 인스턴스에 적용되는 기능을 설명합니다.
+> 이 때문에 좀 더 일반적인 용어인 인스턴스 (instance) 가 사용됩니다.
+
+<br>
+
+## 구조체와 클래스의 비교 (Comparing Structures and Classes)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
