Update 9.Structures and Classes.md

--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -73,8 +73,66 @@ Swift 의 구조체와 클래스는 공통점이 많습니다.
 
 ### 정의 구문 (Definition Syntax)
 
+구조체와 클래스는 비슷한 정의 구문을 가지고 있습니다.
 
+구조체는 `struct` 키워드로 클래스는 `class` 키워드로 시작합니다.
 
+둘다 중괄호 안에 전체 정의가 위치합니다.
+
+~~~ swift
+struct SomeStructure {
+    // structure definition goes here
+}
+class SomeClass {
+    // class definition goes here
+}
+~~~
+
+> Note
+> 새로운 구조체 또는 클래스를 정의할 때마다 새로운 Swift 타입을 정의합니다.
+> 표준 Swift 타입 (`String`, `Int`, `Bool` 과 같은) 의 대소문자와 일치하도록 타입 `UpperCamelCase` 이름 (`SomeStructure` 와 `SomeClass` 와 같이) 을 지정하십시오.
+> 프로퍼티와 메서드는 타입 이름과 구분하기 위해 `lowerCamelCase` 이름 (`frameRate` 와 `incrementCount` 와 같이) 으로 지정하십시오.
+
+#
+
+다음은 구조체 정의와 클래스 정의의 예입니다.
+
+~~~ swift
+struct Resolution {
+    var width = 0
+    var height = 0
+}
+class VideoMode {
+    var resolution = Resolution()
+    var interlaced = false
+    var frameRate = 0.0
+    var name: String?
+}
+~~~
+
+위 예제는 픽셀기반의 화면 해상도를 설명하는 `Resolution` 이라는 새로운 구조체를 정의합니다.
+
+이 구조체는 `width` 와 `height` 라 불리는 저장 프로퍼티를 가지고 있습니다.
+
+저장 프로퍼티는 구조체 또는 클래스의 일부로 묶여 저장되는 상수 또는 변수 입니다.
+
+이 두 프로퍼티는 정수값 `0` 으로 초기값이 설정되므로 `Int` 타입으로 추론됩니다.
+
+#
+
+위 예제는 비디오 화면을 위한 특정 비디오 모드를 설명하는 `VideoMode` 라는 새로운 클래스를 정의합니다.
+
+이 클래스는 4개의 저장 프로퍼티를 가지고 있습니다.
+
+첫번째 `resolution` 은 `Resolution` 의 프로퍼티 타입으로 추론되는 새로운 `Resolution` 구조체 인스턴스로 초기화 됩니다.
+
+다른 3가지 프로퍼티의 경우 새로운 `VideoMode` 인스턴스의 `interlaced` 설정은 `false` ("비인터레이스 비디오") 로 재생 프레임 속도 `frameRate` 는 `0.0` 으로 그리고 `name` 이라는 옵셔널 `String` 값으로 초기화 됩니다.
+
+`name` 프로퍼티는 옵셔널 타입이기 때문에 기본값인 `nil` 또는 "`name` 값 없음" 이 자동으로 지정됩니다.
+
+<br>
+
+### 구조체와 클래스 인스턴스 (Structure and Class Instances)
 
 
 
