--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -134,6 +134,34 @@ class VideoMode {
 
 ### 구조체와 클래스 인스턴스 (Structure and Class Instances)
 
+`Resolution` 구조체 정의와 `VideoMode` 클래스 정의는 오직 `Resolution` 또는 `VideoMode` 의 모양만 설명합니다.
+
+그것들 자체는 특정 해상도나 비디오 모드를 설명하지 않습니다.
+
+그렇게 하려면 구조체 또는 클래스의 인스턴스를 생성해야합니다.
+
+#
+
+인스턴스를 생성하는 구문은 구조체와 클래스 모두 매우 유사합니다.
+
+~~~ swift
+let someResolution = Resolution()
+let someVideoMode = VideoMode()
+~~~
+
+구조체와 클래스 모두 새로운 인스턴스를 위해 초기화 구문을 사용합니다.
+
+가장 간단한 형태의 초기화 구문은 `Resolution()` 또는 `VideoMode()` 와 같이 클래스 또는 구조체 타입 이름 뒤에 빈 소괄호를 붙여 사용하는 것입니다.
+
+이렇게 하면 모든 프로퍼티가 기본값으로 초기화된 클래스 또는 구조체의 새로운 인스턴스가 생성됩니다.
+
+클래스와 구조체 초기화에 대한 자세한 내용은 [초기화 (Initialization)]() 에 설명되어 있습니다.
+
+<br>
+
+### 프로퍼티 접근 (Accessing Properties)
+
+
 
 
 
