Update 9.Structures and Classes.md

--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -161,11 +161,57 @@ let someVideoMode = VideoMode()
 
 ### 프로퍼티 접근 (Accessing Properties)
 
+점 구문 (dot syntax) 을 사용하여 인스턴스의 프로퍼티에 접근할 수 있습니다.
 
+점 구문은 인스턴스 이름 뒤에 구분자 (`.`) 로 분리하고 공백 없이 프로퍼티 이름을 작성합니다.
 
+~~~ swift
+print("The width of someResolution is \(someResolution.width)")
+// Prints "The width of someResolution is 0"
+~~~
 
+이 예제에서 `someResolution.width` 는 `someResolution` 의 `width` 프로퍼티를 참조하고 기본 초기값 `0` 을 반환합니다.
 
+#
 
+`VideoMode` 의 `resolution` 프로퍼티에 `width` 프로퍼티와 같이 하위 프로퍼티에 접근할 수 있습니다.
+
+~~~ swift
+print("The width of someVideoMode is \(someVideoMode.resolution.width)")
+// Prints "The width of someVideoMode is 0"
+~~~
+
+#
+
+또한 변수 프로퍼티에 새로운 값을 할당하기 위해 점 구문을 사용할 수 있습니다.
+
+~~~ swift
+someVideoMode.resolution.width = 1280
+print("The width of someVideoMode is now \(someVideoMode.resolution.width)")
+// Prints "The width of someVideoMode is now 1280"
+~~~
+
+<br>
+
+### 구조체 타입에 대한 멤버별 초기화 구문 (Memberwise Initializers for Structure Types)
+
+모든 구조체는 새로운 구조체 인스턴스의 멤버 프로퍼티를 초기화 할 때 사용할 수 있는 자동으로 생성된 멤버별 초기화 구문 (memberwise initializer) 을 가지고 있습니다.
+
+새로운 인스턴스의 프로퍼티 초기값은 이름으로 멤버별 초기화에 전달될 수 있습니다.
+
+~~~ swift
+let vga = Resolution(width: 640, height: 480)
+~~~
+
+#
+
+구조체와 반대로 클래스 인스턴스는 멤버별 초기화를 받지 않습니다.
+
+초기화에 대한 자세한 설명은 [초기화 (Initialization)]() 에 설명되어 있습니다.
+
+<br>
+
+## 구조체와 열거형은 값 타입 (Structures and Enumerations Are Value Types)
 
 
 
