--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -213,8 +213,110 @@ let vga = Resolution(width: 640, height: 480)
 
 ## 구조체와 열거형은 값 타입 (Structures and Enumerations Are Value Types)
 
+값 타입은 변수나 상수에 할당되거나 함수에 전달될 때 값이 복사되는 타입입니다.
+
+#
+
+실제로 이전 챕터에서 값 타입에 대해 광범위하게 다뤘습니다.
+
+실제로 Swift 의 모든 기본 타입 (정수, 부동 소수점, 부울, 문자열, 배열 및 딕셔너리) 은 값 타입이며 구조체로 구현되어 있습니다.
+
+#
+
+Swift 에서 모든 구조체와 열거형은 값 타입입니다.
+
+즉 생성한 모든 구조체와 열거형 인스턴스와 프로퍼티로 포함된 모든 값 타입은 코드에서 전달될 때 항상 복사됩니다.
+
+> Note    
+> 배열, 딕셔너리, 문자열과 같이 Swift 표준 라이브러리에 정의된 컬렉션은 최적화를 사용하여 복사 성능 비용을 줄입니다.
+> 즉시 복사본을 만드는 대신 이러한 컬렉션은 원본 인스턴스와 복사본 간에 요소가 저장된 메모리를 공유합니다.
+> 컬렉션의 복사본 중 하나가 수정되면 해당 요소는 수정되기 직전에 복사됩니다.
+> 코드에서 보이는 동작은 항상 바로 복사가 일어나는 것처럼 보입니다.
+
+#
+
+이전 예제의 `Resolution` 구조체를 사용하는 다음 예제를 살펴봅시다.
+
+~~~ swift
+let hd = Resolution(width: 1920, height: 1080)
+var cinema = hd
+~~~
+
+이 예제는 `hd` 라는 상수를 선언하고 풀 HD 비디오 (1920 픽셀 너비와 1080 픽셀 높이) 의 너비와 높이로 초기화하는 `Resolution` 인스턴스를 설정합니다.
+
+#
+
+그런 다음 `cinema` 라는 변수를 선언하고 `hd` 의 현재 값을 설정합니다.
+
+`Resolution` 은 구조체 이므로 기존 인스턴스의 복사본이 만들어지고 이 새 복사본이 `cinema` 에 할당됩니다.
+
+`hd` 와 `cinema` 가 현재 같은 너비와 높이를 가지지만 2개는 완벽하게 다른 인스턴스 입니다.
+
+#
+
+다음으로 `cinema` 의 `width` 프로퍼티를 디지털 시네마 프로젝션에 사용되는 약간 더 넓은 2K 표준 (2048 픽셀 너비와 1080 픽셀 높이) 으로 수정됩니다.
+
+~~~ swift
+cinema.width = 2048
+~~~
+
+#
+
+`cinema` 의 `width` 프로퍼티를 확인하면 `2048` 로 변경되었음을 알 수 있습니다.
+
+~~~ swift
+print("cinema is now \(cinema.width) pixels wide")
+// Prints "cinema is now 2048 pixels wide"
+~~~
+
+#
+
+그러나 기존 `hd` 인스턴스의 `width` 프로퍼티는 `1920` 의 기존값을 그대로 가지고 있습니다.
+
+~~~ swift
+print("hd is still \(hd.width) pixels wide")
+// Prints "hd is still 1920 pixels wide"
+~~~
+
+#
+
+`cinema` 에 `hd` 의 현재값이 주어졌을 때 `hd` 에 저장된 값은 새로운 `cinema` 인스턴스에 복사됩니다.
+
+최종 결과는 동일한 숫자값을 포함하는 완벽히 분리된 2개의 인스턴스였습니다.
+
+그러나 이들은 분리된 인스턴스이기 때문에 아래의 그림과 같이 `cinema` 에 너비를 `2048` 로 설정해도 `hd` 에 저장된 너비에는 영향을 주지 않습니다.
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/840b3723-ed8b-4f72-b1cb-8d611e7311f7">
+
+#
+
+열거형에서도 같은 동작이 이뤄집니다.
+
+~~~ swift
+enum CompassPoint {
+    case north, south, east, west
+    mutating func turnNorth() {
+        self = .north
+    }
+}
+var currentDirection = CompassPoint.west
+let rememberedDirection = currentDirection
+currentDirection.turnNorth()
 
 
+print("The current direction is \(currentDirection)")
+print("The remembered direction is \(rememberedDirection)")
+// Prints "The current direction is north"
+// Prints "The remembered direction is west"
+~~~
+
+`rememberedDirection` 은 `currentDirection` 에 값이 할당될 때 실질적으로 복사본이 설정됩니다.
+
+이후 `currentDirection` 의 값을 변경해도 `rememberedDirection` 에 저장된 원래 값의 복사본에는 영향을 주지 않습니다.
+
+<br>
+
+## 클래스는 참조 타입 (Classes Are Reference Types)
 
 
 
