Update 9.Structures and Classes.md

--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -318,37 +318,128 @@ print("The remembered direction is \(rememberedDirection)")
 
 ## 클래스는 참조 타입 (Classes Are Reference Types)
 
+값 타입과 달리 참조 타입은 변수 또는 상수에 할당되거나 함수에 전달될 때 복사되지 않습니다.
 
+복사본 대신 동일한 기존 인스턴에 대한 참조가 사용됩니다.
 
+#
 
+다음은 위에 정의된 `VideoMode` 를 사용하는 예입니다.
 
+~~~ swift
+let tenEighty = VideoMode()
+tenEighty.resolution = hd
+tenEighty.interlaced = true
+tenEighty.name = "1080i"
+tenEighty.frameRate = 25.0
+~~~
 
+이 예제에서는 `tenEighty` 라는 새로운 상수를 선언하고 `VideoMode` 클래스의 새로운 인스턴스를 참조하도록 설정합니다.
 
+비디오 모드에는 이전의 `1920` X `1080` 의 HD 해상도 복사본이 할당됩니다.
 
+인터레이스되도록 설정되고 이름은 `"1080i"` 로 설정하고 프레임 속도를 초당 `25.0` 프레임으로 설정합니다.
 
+#
 
+다음으로 `tenEighty` 은 `alsoTenEighty` 이라는 새로운 상수에 할당되고 `alsoTenEighty` 의 프레임 속도를 수정합니다.
 
+~~~ swift
+let alsoTenEighty = tenEighty
+alsoTenEighty.frameRate = 30.0
+~~~
 
+#
 
+클래스는 참조 타입이므로 `tenEighty` 과 `alsoTenEighty` 은 실질적으로 같은 `VideoMode` 인스턴스를 참조합니다.
 
+사실상 아래 그림과 같이 동일한 단일 인스턴에 대한 2개의 서로 다른 이름일 뿐입니다.
 
+<img width="700" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/3d1a1ed6-1ccf-4f17-ab0c-31bf24b11663">
 
+`tenEighty`의 `frameRate` 프로퍼티를 확인하면 `VideoMode` 인스턴스에서 `30.0` 의 새로운 프레임 속도가 올바르게 설정된 것을 보여줍니다.
 
+~~~ swift
+print("The frameRate property of tenEighty is now \(tenEighty.frameRate)")
+// Prints "The frameRate property of tenEighty is now 30.0"
+~~~
 
+#
 
+이 예제는 참조 타입을 추론하기가 얼마나 더 어려운지 보여줍니다.
 
+프로그램 코드에서 `tenEighty` 와 `alsoTenEighty` 가 멀리 떨어져 있으면 비디오 모드가 변경되는 모든 방법을 찾는 것이 어려울 수 있습니다.
 
+`tenEighty` 를 사용할 때마다 `alsoTenEighty` 를 사용하는 코드에 대해서도 생각해야 하며 그 반대의 경우도 마찬가지입니다.
 
+반면 값 타입은 동일한 값과 상호작용하는 모든 코드가 소스 파일에서 서로 가깝기 때문에 추론하기가 더 쉽습니다.
 
+#
 
+`tenEighty` 와 `alsoTenEnighty` 는 변수가 아닌 상수로 선언됩니다.
 
+그러나 `tenEighty` 와 `alsoTenEnighty` 상수 자체는 실제로 변경되지 않으므로 `tenEighty.frameRate` 와 `alsoTenEighty.frameRate` 는 여전히 변경 가능합니다.
 
+`tenEighty` 와 `alsoTenEnighty` 자체는 `VideoMode` 인스턴스를 저장하지 않습니다.
 
+대신 `VideoMode` 인스턴스를 둘다 참조합니다.
 
+변경되는 것은 `VideoMode` 에 대한 해당 상수의 참조의 값이 아니라 `VideoMode` 의 `frameRate` 프로퍼티 입니다.
 
+<br>
 
+### 식별 연산자 (Identity Operators)
 
+클래스는 참조 타입이기 때문에 여러개의 상수와 변수가 클래스의 동일한 단일 인스턴스를 참조하는 것이 가능합니다.
 
+(구조체와 열거형은 상수, 변수, 함수에 전달될 때 항상 복사되기 때문에 클래스와 같지 않습니다.)
+
+#
+
+2개의 상수 또는 변수가 정확히 동일한 클래스 인스턴스를 참조하는지 확인하는 것이 유용할 수 있습니다.
+
+이를 가능하게 하기 위해 Swift 는 2가지 식별 연산자를 제공합니다.
+
+- 동일 인스턴스 (Identical to) (`===`)
+
+- 동일하지 않은 인스턴스 (Not identical to) (`!==`)
+
+#
+
+이 연산자를 사용하여 2개의 상수 또는 변수가 동일한 단일 인스턴스를 참조하는지 확인할 수 있습니다.
+
+~~~ swift
+if tenEighty === alsoTenEighty {
+    print("tenEighty and alsoTenEighty refer to the same VideoMode instance.")
+}
+// Prints "tenEighty and alsoTenEighty refer to the same VideoMode instance."
+~~~
+
+동일 인스턴스 (3개의 등호로 표시 `===`) 는 같음 (2개의 등호로 표시 `==`) 과 동일한 것을 의미하지 않습니다.
+
+동일 인스턴스는 클래스 타입의 2개의 상수 또는 변수가 정확히 동일한 클래스 인스턴스를 참조한다는 의미입니다.
+
+같음은 두 인스턴스가 값이 동일하거나 동등하다는 것을 의미합니다.
+
+#
+
+커스텀 구조체와 클래스를 정의할 때 두 인스턴스가 동일한지 결정하는 것은 사용자의 몫입니다.
+
+`==` 와 `!=` 연사자의 자체 구현을 정의하는 프로세스는 [동등 연산자 (Equivalence Operators)]() 에 자세히 설명되어 있습니다.
+
+<br>
+
+### 포인터 (Pointers)
+
+C, C++ 또는 Objective-C 에 대한 경험이 있다면 메모리의 주소를 참조하기 위해 포인터를 사용한다는 것을 알고 있을 것입니다.
+
+일부 참조 타입의 인스턴스를 참조하는 Swift 상수 또는 변수는 C 의 포인터와 유사하지만 메모리의 주소에 대한 직접적인 포인터가 아니며 포인터 표시를 위해 별표 (`*`) 를 작성할 필요가 없습니다.
+
+대신 이러한 참조는 Swift 의 다른 상수나 변수 처럼 정의됩니다.
+
+Swift 표준 라이브러리는 포인터와 직접 상호작용이 필요한 경우 사용할 수 있는 포인터와 버퍼 타입을 제공합니다.
+
+자세한 내용은 [수동 메모리 관리 (Manual Memory Management)]() 를 참조하세요.
 
 ***
 
