--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -1,5 +1,48 @@
 # Properties (프로퍼티)
 
+인스턴스 또는 타입의 일부인 저장 및 계산된 값에 접근합니다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
