--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -2,6 +2,35 @@
 
 인스턴스 또는 타입의 일부인 저장 및 계산된 값에 접근합니다.
 
+프로퍼티 (Properties) 는 값을 특정 클래스, 구조체 또는 열거형과 연결합니다.
+
+저장 프로퍼티 (Stored properties) 는 상수 및 변수 값을 인스턴스의 일부로 저장하는 반면 계산 프로퍼티 (Computed properties) 는 값을 저장하는 대신 값을 계산합니다.
+
+계산 프로퍼티는 클래스, 구조체, 열거형으로 제공됩니다.
+
+저장 프로퍼티는 클래스와 구조체에 의해서만 제공됩니다.
+
+#
+
+저장 및 계산 프로퍼티는 일반적으로 특정 타입의 인스턴스와 연결됩니다.
+
+그러나 프로퍼티는 타입 자체와 연결될 수도 있습니다.
+
+이러한 프로퍼티를 타입 프로퍼티라고 합니다.
+
+#
+
+또한 프로퍼티 관찰자 (property observers) 를 정의하여 프로퍼티 값의 변경 사항을 모니터링할 수 있으며 사용자 지정 작업으로 이에 응답할 수 있습니다.
+
+프로퍼티 관찰자는 사용자가 직접 정의한 저장 프로퍼티와 하위 클래스가 상위 클래스에서 상속하는 프로퍼티에 추가할 수 있습니다.
+
+#
+
+프로퍼티 래퍼를 사용하여 여러 프로퍼티의 getter 와 setter 에서 코드를 재사용 할 수 있습니다.
+
+<br>
+
+## 저장 프로퍼티 (Stored Properties)
 
 
 
