--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -32,7 +32,69 @@
 
 ## 저장 프로퍼티 (Stored Properties)
 
+가장 간단한 형태로 저장 프로퍼티는 특정 클래스 또는 구조체의 인스턴스의 일부로 저장되는 상수 또는 변수 입니다.
 
+저장 프로퍼티는 저장 프로퍼티 변수 (variable stored properties) (`var` 키워드 사용) 또는 저장 프로퍼티 상수 (constant stored properties) (`let` 키워드 사용) 로 쓸 수 있습니다.
+
+#
+
+[기본 프로퍼티 값 (Default Property Values)]() 에 설명된 대로 정의의 일부로 저장 프로퍼티에 대한 기본값을 제공할 수 있습니다.
+
+초기화 중에 저장 프로퍼티의 초기값을 설정하고 수정할 수도 있습니다.
+
+[초기화 중 프로퍼티 상수 할당 (Assigning Constant Properties During Initialization)]() 에서 설명된 대로 상수 저장 프로퍼티의 경우에도 마찬가지 입니다.
+
+#
+
+아래 예제는 `FixedLengthRange` 라는 구조체를 정의합니다.
+
+이 구조체는 생성 후 범위 길이를 변경할 수 없는 정수 범위를 나타냅니다.
+
+~~~ swift
+struct FixedLengthRange {
+    var firstValue: Int
+    let length: Int
+}
+var rangeOfThreeItems = FixedLengthRange(firstValue: 0, length: 3)
+// the range represents integer values 0, 1, and 2
+rangeOfThreeItems.firstValue = 6
+// the range now represents integer values 6, 7, and 8
+~~~
+
+`FixedLengthRange` 의 인스턴스에는 `firstValue` 라는 저장 프로퍼티 변수와 `length` 라는 저장 프로퍼티 상수가 있습니다.
+
+위의 예제에서 `length` 는 새 범위가 생성될 때 초기화되며 상수 프로퍼티이기 때문에 이후에는 변경할 수 없습니다.
+
+<br>
+
+### 상수 구조체 인스턴스의 저장 프로퍼티 (Stored Properties of Constant Structure Instances)
+
+구조체의 인스턴스를 생성하고 해당 인스턴스를 상수에 할당하면 프로퍼티 변수로 선언되어 있어도 인스턴스의 프로퍼티를 수정할 수 없습니다.
+
+~~~ swift
+let rangeOfFourItems = FixedLengthRange(firstValue: 0, length: 4)
+// this range represents integer values 0, 1, 2, and 3
+rangeOfFourItems.firstValue = 6
+// this will report an error, even though firstValue is a variable property
+~~~
+
+`rangeOfFourItems` 는 `let` 키워드를 사용하여 상수로 선언되므로 `firstValue` 가 프로퍼티 변수 이더라도 `firstValue` 프로퍼티를 변경할 수 없습니다.
+
+#
+
+이러한 동작은 구조체가 값 타입 이기 때문입니다.
+
+값 타입의 인스턴스가 상수로 선언되면 해당 인스턴스의 모든 프로퍼티가 상수로 표시됩니다.
+
+#
+
+클래스는 참조 타입 이므로 다르게 동작합니다.
+
+참조 타입의 인스턴스를 상수에 할당하면 해당 인스턴스의 프로퍼티 변수는 변경할 수 있습니다.
+
+<br>
+
+### 지연 저장 프로퍼티 (Lazy Stored Properties)
 
 
 
