--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -96,13 +96,80 @@ rangeOfFourItems.firstValue = 6
 
 ### 지연 저장 프로퍼티 (Lazy Stored Properties)
 
+지연 저장 프로퍼티 (lazy stored property) 는 처음 사용될 때까지 초기값이 계산되지 않는 프로퍼티 입니다.
+
+지연 저장 프로퍼티는 선언 앞에 `lazy` 수정자를 작성하여 나타냅니다.
+
+> Note    
+> 지연 저장 프로퍼티는 인스턴스 초기화가 완료될 때까지 초기값이 없을 수 있으므로 항상 `lazy` 키워드를 사용하여 변수로 선언해야 합니다.
+> 상수 프로퍼티는 초기화가 완료되기 전에 항상 값을 가져야 하므로 지연 저장 프로퍼티로 선언할 수 없습니다.
+
+#
+
+지연 저장 프로퍼티는 인스턴스의 초기화가 완료될 때까지 값을 알 수 없는 외부 요인에 인해 초기값이 달라질 때 유용합니다.
+
+지연 저장 프로퍼티는 프로퍼티의 초기값으로 필요할 때까지 수행하면 안되는 복잡하거나 계산 비용이 많이 드는 경우에도 유용합니다.
+
+#
+
+아래 예제는 복잡한 클래스의 불필요한 초기화를 피하기 위해 지연 저장 프로퍼티를 사용합니다.
+
+이 예제에서는 `DataImporter` 와 `DataManager` 라는 2개의 클래스를 정의합니다.
+
+~~~ swift
+class DataImporter {
+    /*
+    DataImporter is a class to import data from an external file.
+    The class is assumed to take a nontrivial amount of time to initialize.
+    */
+    var filename = "data.txt"
+    // the DataImporter class would provide data importing functionality here
+}
 
 
+class DataManager {
+    lazy var importer = DataImporter()
+    var data: [String] = []
+    // the DataManager class would provide data management functionality here
+}
 
 
+let manager = DataManager()
+manager.data.append("Some data")
+manager.data.append("Some more data")
+// the DataImporter instance for the importer property hasn't yet been created
+~~~
 
+`DataManager` 클래스에는 `String` 값의 빈 배열로 초기화 되는 `data` 라는 저장 프로퍼티가 있습니다.
 
+나머지 기능이 보이진 않지만 `DataManager` 클래스의 목적은 `String` 데이터 배열을 관리하고 이에 대한 접근을 제공하는 것입니다.
 
+#
+
+`DataManager` 클래스의 기능 중 하나는 파일에서 데이터를 가져오는 기능입니다.
+
+이 기능은 `DataImporter` 클래스에서 제공되며 초기화 하는데 적지 않은 시간이 걸리는 것으로 간주됩니다.
+
+이는 `DataImporter` 인스턴스가 초기화될 때 `DataImporter` 인스턴스가 파일을 열고 해당 내용을 메모리로 읽어야 하기 때문일 수 있습니다.
+
+#
+
+`DataManager` 인스턴스는 파일에서 데이터를 가져오지 않고도 데이터를 관리할 수 있으므로 `DataManager` 가 생성될 때 새로운 `DataImporter` 인스턴스를 생성할 필요가 없습니다.
+
+대신 처음 사용하는 경우 `DataImporter` 인스턴스를 생성하는 것이 더 합리적입니다.
+
+#
+
+`lazy` 수정자로 표시되어 있기 때문에 `importer` 프로퍼티의 `DataImporter` 인스턴스는 `filename` 프로퍼티를 조회할 때 처럼 `importer` 프로퍼티에 처음 접근할 때만 생성됩니다.
+
+~~~ swift
+print(manager.importer.filename)
+// the DataImporter instance for the importer property has now been created
+// Prints "data.txt"
+~~~
+
+> Note    
+> `lazy` 수정자로 표시된 프로퍼티는 여러 쓰레드에서 동시에 접근되고 프로퍼티가 아직 초기화되지 않은 경우 프로퍼티가 한번만 초기화 된다는 보장은 없습니다.
 
 
 
