--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -171,6 +171,28 @@ print(manager.importer.filename)
 > Note    
 > `lazy` 수정자로 표시된 프로퍼티는 여러 쓰레드에서 동시에 접근되고 프로퍼티가 아직 초기화되지 않은 경우 프로퍼티가 한번만 초기화 된다는 보장은 없습니다.
 
+<br>
+
+### 저장 프로퍼티와 인스턴스 변수 (Stored Properties and Instance Variables)
+
+Objective-C 에 대한 경험이 있다면 클래스 인스턴스의 일부로 값과 참조를 저장하는 2가지 방법을 제공한다는 것을 알 수 있습니다.
+
+프로퍼티 외에도 인스턴스 변수를 프로퍼티에 저장된 값에 대한 백업 저장소로 사용할 수 있습니다.
+
+#
+
+Swift 는 이러한 개념을 단일 프로퍼티 선언으로 통합합니다.
+
+Swift 프로퍼티는 해당 인스턴스 변수가 없으며 프로퍼티의 백업 저장소에 직접적으로 접근할 수 없습니다.
+
+이 접근 방식은 다양한 컨텍스트에서 값에 접근하는 방법에 대한 혼란을 방지하고 프로퍼티 선언을 하나의 명확한 구문으로 단순화 합니다.
+
+이름, 타입 그리고 메모리 관리 특성을 포함하여 프로퍼티에 대한 모든 정보는 타입 정의의 일부로 한곳에서 정의됩니다.
+
+<br>
+
+## 계산 프로퍼티 (Computed Properties)
+
 
 
 
