--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -246,7 +246,31 @@ print("square.origin is now at (\(square.origin.x), \(square.origin.y))")
 
 #
 
+위의 예제는 `square` 라는 새로운 `Rect` 변수를 생성합니다.
 
+`square` 변수는 `(0, 0)` 의 원점, `10` 의 너비와 높이로 초기화 됩니다.
+
+이 사각형은 아래의 다이어그램에서 연한 초록색 사격형으로 표현됩니다.
+
+#
+
+`square` 변수의 `center` 프로퍼티는 점 구문 (`square.center`) 로 접근되고 `center` 에 대한 getter 를 호출하여 현재 프로퍼티 값을 조회합니다.
+
+기존 값을 반환하는 대신 getter 는 실제로 사각형의 중심을 나타내는 새로운 `Point` 값을 계산하고 반환합니다.
+
+위에서 볼 수 있듯이 getter 는 `(5, 5)` 의 중심점을 올바르게 반환합니다.
+
+#
+
+아래 다이어그램의 어두운 초록색 사각형처럼 `center` 프로퍼티는 `(15, 15)` 의 새로운 값으로 설정되어 새로운 위치로 사각형이 위와 우측으로 이동합니다.
+
+`center` 프로퍼티를 설정하면 `origin` 저장 프로퍼티의 `x` 와 `y` 값을 수정하고 사각형을 새로운 위치로 이동하는 `center` 의 setter 가 호출됩니다.
+
+<img width="530" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/cb572d71-534d-4160-a05d-a4dcdba15dd4">
+
+<br>
+
+### 짧은 Setter 선언 (Shorthand Setter Declaration)
 
 
 
