--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -272,9 +272,94 @@ print("square.origin is now at (\(square.origin.x), \(square.origin.y))")
 
 ### 짧은 Setter 선언 (Shorthand Setter Declaration)
 
+계산 프로퍼티의 setter 가 설정할 새 값의 이름을 정의하지 않으면 `newValue` 라는 기본 이름이 사용됩니다.
 
+다음은 이 약식 표기법을 활용하는 `Rect` 구조체의 대체 버전입니다.
 
+~~~ swift
+struct AlternativeRect {
+    var origin = Point()
+    var size = Size()
+    var center: Point {
+        get {
+            let centerX = origin.x + (size.width / 2)
+            let centerY = origin.y + (size.height / 2)
+            return Point(x: centerX, y: centerY)
+        }
+        set {
+            origin.x = newValue.x - (size.width / 2)
+            origin.y = newValue.y - (size.height / 2)
+        }
+    }
+}
+~~~
 
+<br>
+
+### 짧은 Getter 선언 (Shorthand Getter Declaration)
+
+getter 의 전체 본문이 단일 표현식인 경우 getter 는 암시적으로 해당 표현식을 반환합니다.
+
+다음은 getter 와 setter 의 약식 표기법을 활용하는 또 다른 버전의 `Rect` 구조체 입니다.
+
+~~~ swift
+struct CompactRect {
+    var origin = Point()
+    var size = Size()
+    var center: Point {
+        get {
+            Point(x: origin.x + (size.width / 2),
+                  y: origin.y + (size.height / 2))
+        }
+        set {
+            origin.x = newValue.x - (size.width / 2)
+            origin.y = newValue.y - (size.height / 2)
+        }
+    }
+}
+~~~
+
+getter 에서 `return` 을 생략하는 것은 [암시적 반환을 사용하는 함수 (Function With an Implicit Return)]() 에 설명된 대로 함수의 `return` 생략 규칙과 동일합니다.
+
+<br>
+
+### 읽기 전용 계산 프로퍼티 (Read-Only Computed Properties)
+
+setter 가 없고 getter 만 있는 계산 프로퍼티는 읽기 전용 계산 프로퍼티 (read-only computed property) 라고 합니다.
+
+읽기 전용 계산 프로퍼티는 항상 값을 반환하고 점 구문으로 접근할 수 있지만 다른 값으로 설정할 수는 없습니다.
+
+> Note    
+> 값이 고정되어 있지 않기 때문에 읽기 전용 계산 프로퍼티를 포함하여 계산 프로퍼티는 `var` 키워드를 사용하여 변수 프로퍼티로 선언해야 합니다.
+> `let` 키워드는 인스턴스 초기화의 일부로 한번 설정되면 값을 변경할 수 없음을 나타내기 위해 오직 상수 프로퍼티에서만 사용됩니다.
+
+#
+
+`get` 키워드와 중괄호를 제거하여 읽기 전용 계산 프로퍼티의 선언을 단순화할 수 있습니다.
+
+~~~ swift
+struct Cuboid {
+    var width = 0.0, height = 0.0, depth = 0.0
+    var volume: Double {
+        return width * height * depth
+    }
+}
+let fourByFiveByTwo = Cuboid(width: 4.0, height: 5.0, depth: 2.0)
+print("the volume of fourByFiveByTwo is \(fourByFiveByTwo.volume)")
+// Prints "the volume of fourByFiveByTwo is 40.0"
+~~~
+
+이 예제는 `width`, `height`, `depth` 프로퍼티가 있는 3D 사각형 박스를 나타내는 `Cuboid` 라는 새로운 구조체를 정의 합니다.
+
+이 구조체에는 직육면체의 현재 부피를 계산하고 반환하는 `volume` 이라는 읽기 전용 계산 프로퍼티가 있습니다.
+
+`width`, `height`, `depth` 의 어떤 값을 특정 `volume` 값에 사용해야 하는지 모호하기 때문에 `volume` 을 설정 가능하게 하는 것은 의미가 없습니다.
+
+그럼에도 불구하고 외부 사용자가 현재 계산된 부피를 알 수 있도록 읽기 전용 계산 프로퍼티를 제공하는 `Cuboid` 는 유용합니다.
+
+<br>
+
+## 프로퍼티 관찰자 (Property Observers)
 
 
 
